--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-26 14:40:16
+lastsearch = 2024-07-26 18:24:47
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -72,8 +72,8 @@ title = D2 - Phát Triển Người Lãnh Đạo - Mục Sư Brian Houston
 url = https://quangharvest.com/isom-khoa-cap-4/d2-phat-trien-nguoi-lanh-dao-developing-leaders
 
 [www.vietnamairport.vn]
-match = -240.0%%
-title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt Nam ...
+match = -213.3%%
+title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt ...
 url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/so-do-nha-ga-2
 
 [www.axel-gl.com]
