--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-07-26 14:46:58
+lastsearch = 2024-07-26 18:28:19
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc Giá Bao Nhiêu?
 url = https://chanrathanhthuy.com/tin-tuc/chieu-truc-gia-bao-nhieu-1132.html
 
 [www.facebook.com]
-match = 4.2%%
-title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
-url = https://www.facebook.com/chieutregiare/
+match = 25.0%%
+title = Chiếu Trúc Tre Việt Nam | Hanoi
+url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
 
 [www.yellowpages.vn]
 match = -37.5%%
@@ -33,8 +33,8 @@ url = https://shopee.vn/list/chiếu/trúc/1m6
 
 [chieutrucsaigon.com]
 match = 8.3%%
-title = MUA CHIẾU TRÚC CHÍNH HÃNG QUẬN TÂN BÌNH
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/mua-chieu-truc-quan-tan-binh-76.html
+title = CHIẾU TRÚC VIỆT NAM CHẤT LƯỢNG RA SAO?
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-viet-nam-chat-luong-ra-sao-128.html
 
 [www.lazada.vn]
 match = -62.5%%
@@ -47,9 +47,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.youtube.com]
-match = 25.0%%
-title = Review chiếu trúc hạt đen
-url = https://www.youtube.com/watch?v=XsFS_4Jr5lc
+match = -16.7%%
+title = Top 3 Chiếu Trúc mùa hè hot nhất tại Đệm Xanh
+url = https://www.youtube.com/watch?v=HfaucbE1OKk
 
 [www.chotot.com]
 match = -54.2%%
