--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-26 17:34:08
+lastsearch = 2024-07-26 18:25:30
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfrQDlmd&sig=ACfU3U3M41mGTwvhj3gXoMR7tk1a_3Gi4w&hl=en&sa=X&ved=2ahUKEwiTh5rpwMSHAxXyHEQIHWYiBxEQ6AF6BAgYEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfrQGml5&sig=ACfU3U2x_tLQPgqJac_zQuVYhnTqQWEWMg&hl=en&sa=X&ved=2ahUKEwiC0dCmzMSHAxW7LkQIHVr1AhwQ6AF6BAglEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -94,7 +94,7 @@ url = https://renaissancefest.com/
 [us.mbt.com]
 match = -220.0%%
 title = Men's Ren in White 702758-16L - MBT Shoes
-url = https://us.mbt.com/men-s-ren-white-702758-16l.html?srsltid=AfmBOoqGRFjRuVVzZbWTaJSS52jXAaN367o3BEZ9i8CwOeVABy8PRUsd
+url = https://us.mbt.com/men-s-ren-white-702758-16l.html?srsltid=AfmBOoryDVEdsVqWR3H_7qwvnIQtIv3FVO1Cz8aQBGX-QX4b9HlCh8I3
 
 [hopkinssports.com]
 match = -100.0%%
