--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-07-26 17:30:07
+lastsearch = 2024-07-26 18:26:39
 
 [tuananh.vn]
 match = 8.0%%
@@ -14,7 +14,7 @@ url = https://tuananh.vn/dem-bong-ep-korea-kaki-p112.html
 [demxanh.com]
 match = -28.0%%
 title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html?srsltid=AfmBOop_NVO7MyXkKq2unLDQN7kylvAi12z9SWdk8ZMhGkVGuU_9I__t
 
 [demkhangduy.com]
 match = 25.0%%
@@ -34,7 +34,7 @@ url = https://shopee.vn/search?keyword=nệm tuấn anh
 [demviethome.vn]
 match = -4.0%%
 title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/?srsltid=AfmBOopbM7bpLl68ZuvDEZyh-QGNC_Spnh4yMsprmcy2pF8fRBT1FUTN
 
 [entershopping.vn]
 match = -36.0%%
