--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -12,9 +12,9 @@ title = Chiếu cây Đài Loan 140x190
 url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [dungcuykhoakimminh.com]
-match = -4.8%%
-title = Tìm kiếm từ khóa: Tao
-url = https://dungcuykhoakimminh.com/tag/Tao&trang-21
+match = 0.0%%
+title = Tìm kiếm từ khóa: ion
+url = https://dungcuykhoakimminh.com/tag/ion&trang-19
 
 [mych.vn]
 match = -60.7%%
