--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-07-26 17:56:19
+lastsearch = 2024-07-26 18:37:06
 
 [demxanh.com]
 match = 14.8%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa là gì? Nằm chiếu điều hòa có mát không
 url = https://congtynemthangloi.com/chieu-dieu-hoa-la-gi-nam-chieu-dieu-hoa-co-mat-khong
 
 [suongtuyet.com]
-match = 18.5%%
-title = có nên sử dụng chiếu điều hòa không?
-url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
+match = -29.6%%
+title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
+url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [tiki.vn]
 match = 33.3%%
@@ -52,9 +52,9 @@ title = Chiếu Điều Hòa Sợi Mây Tổng Hợp Cao Cấp ... - Babies.vn
 url = https://babies.vn/chieu-dieu-hoa-soi-may-tong-hop-cao-cap-chieu-dieu-hoa-thong-minh-thoang-khi-mat-ruoi-cho-mua-he
 
 [betiti.com]
-match = -29.6%%
-title = Chiếu Điều Hòa - Betiti - Chuyên Đồ Sơ Sinh, Trọn Bộ ...
-url = https://betiti.com/san-pham/chieu-dieu-hoa/
+match = 68.2%%
+title = Chiếu điều hòa kèm gối
+url = https://betiti.com/san-pham/chieu-dieu-hoa-kem-goi/
 
 [nemsaithanh.com]
 match = 46.2%%
