--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-26 16:17:01
+lastsearch = 2024-07-26 18:28:47
 
 [vinatools.com]
 match = -140.0%%
 title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
-url = https://vinatools.com/keo-cat-ton-d-216-116/
+url = https://vinatools.com/keo-cat-ton-d-216-116/?srsltid=AfmBOorVrMWlfXDdOpjvT2P6e5I2avhod1Z4amSPXTyVRyoPDFaN6L6Y
 
 [www.vietnamairport.vn]
 match = -213.3%%
@@ -82,9 +82,9 @@ title = Ổ Cứng Để Bàn Lacie D2 Pro 16TB USB-C + SRS
 url = https://maiphuong.vn/products/o-cung-de-ban-lacie-d2-pro-16tb-usb-c-srs-stha16000800
 
 [www.instagram.com]
-match = -206.7%%
-title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
-url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
+match = -44.4%%
+title = Instagram
+url = https://www.instagram.com/p/CpwSVeuPb9W/
 
 [play.google.com]
 match = -140.0%%
