--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -12,9 +12,9 @@ title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOoqC0oGuR6XcK9lxxqZdF2NYgUltyxrPJoQJb_-JsPIeiNo58Mfm
 
 [shopee.vn]
-match = -85.0%%
-title = Chiếu Nhựa Mai Huyền Hà Nội 1,5m , 1,6m , 1m8,1m8x3m ...
-url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-Hà-Nội-1-5m-1-6m-1m8-1m8x3m-1m8x4m-i.81313558.12532512757
+match = 70.0%%
+title = Chiếu nhựa Hà Nội các cỡ
+url = https://shopee.vn/Chiếu-nhựa-Hà-Nội-các-cỡ-i.236527859.6960486970
 
 [tchome.vn]
 match = 20.0%%
