--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-26 17:45:22
+lastsearch = 2024-07-26 18:27:45
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -142.9%%
-title = A critical pronouncing dictionary. With a suppl., by E. Smith
-url = https://books.google.com/books?id=cHoCAAAAQAAJ&pg=RA11-PA13&lpg=RA11-PA13&dq=nem+di+a+mon+9f+16+re&source=bl&ots=ubvkldED4R&sig=ACfU3U2mkhRUxQsqPQsr7HFSgClIBWjpdw&hl=en&sa=X&ved=2ahUKEwiY6r2qw8SHAxVJkO4BHVIqFsAQ6AF6BAhDEAM
+match = -123.8%%
+title = A Critical Pronouncing Dictionary, and Expositor of the ...
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKBxczptl&sig=ACfU3U0doa1PYuH9t9cveml3B5B5NCGsJA&hl=en&sa=X&ved=2ahUKEwiQ76HnzMSHAxXYN94AHTMYDpQQ6AF6BAgbEAM
 
 [www.diepxuan.com]
 match = -81.0%%
