--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-26 16:22:30
+lastsearch = 2024-07-26 18:40:39
 
 [www.linkedin.com]
 match = -145.5%%
@@ -109,7 +109,7 @@ url = https://www.sesostrisshrine.org/pages/uploaded_files/15_JF.pdf
 [kstoolsvietnam.vn]
 match = -327.3%%
 title = Kéo cắt thép tấm KS Tools 118.0148 cắt thuận tay trái.
-url = https://kstoolsvietnam.vn/keo-cat-ton-tam/keo-cat-thep-tam-ks-tools-1180148-cat-thuan-tay-trai.html?srsltid=AfmBOoq07mdeIA48op0UKSLJdDZkq4kzzjuOYbBDZZ1t-fCkWds7DuKU
+url = https://kstoolsvietnam.vn/keo-cat-ton-tam/keo-cat-thep-tam-ks-tools-1180148-cat-thuan-tay-trai.html
 
 [sagatexvietnam.com.vn]
 match = -345.5%%
