CI images update

--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-26 17:44:16
+lastsearch = 2024-07-26 18:56:50
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -22,9 +22,9 @@ title = Do HOAs have to report beneficial ownership under the ...
 url = https://www.nixonpeabody.com/insights/alerts/2024/05/08/do-hoas-have-to-report-beneficial-ownership-under-the-cta
 
 [www.flsenate.gov]
-match = -129.4%%
-title = Chapter 720 Section 303 - 2018 Florida Statutes
-url = https://www.flsenate.gov/Laws/Statutes/2018/0720.303
+match = -147.1%%
+title = CS/CS/HB 919 Homeowners' Associations SPONSOR(S)
+url = https://www.flsenate.gov/Session/Bill/2023/919/Analyses/h0919z1.RRS.PDF
 
 [www.doorloop.com]
 match = 0.0%%
@@ -64,7 +64,7 @@ url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-
 [www.leg.state.fl.us]
 match = -170.6%%
 title = The 2023 Florida Statutes (including Special Session C)
-url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/Sections/0720.303.html
+url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/0720.html
 
 [sofl.cooperatornews.com]
 match = -152.9%%
@@ -107,8 +107,8 @@ title = Homeowners' Associations
 url = https://www.azleg.gov/Briefs/Senate/HOMEOWNERS' ASSOCIATIONS 2022.PDF
 
 [business.nv.gov]
-match = -170.6%%
-title = Homeowners Association Complaints - Business and Industry
+match = -52.9%%
+title = Homeowners Association Complaints
 url = https://business.nv.gov/Homeowner/Homeowners_Association_Complaints/
 
 [www.nolo.com]
@@ -430,4 +430,14 @@ url = https://abc13.com/hoa-fees-assessment-homeowner-problems-where-does-my-hom
 match = -123.5%%
 title = Woman suing HOA says homeowners' association is ...
 url = https://www.14news.com/2024/04/11/woman-suing-hoa-says-homeowners-association-is-impacting-her-ability-sell-her-home/
+
+[com.ohio.gov]
+match = -164.7%%
+title = Ohio Department of Commerce: Department of Commerce ...
+url = https://com.ohio.gov/
+
+[www.marylandtaxes.gov]
+match = -117.6%%
+title = 2022 State & local Tax Forms & Instructions
+url = https://www.marylandtaxes.gov/forms/22_forms/Resident_Booklet.pdf
 
