--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-07-26 18:17:04
+lastsearch = 2024-07-26 18:51:34
 
 [shopee.vn]
-match = 4.3%%
-title = Chiếu Trúc Cao Bằng - Chiếu trúc cá nhân
-url = https://shopee.vn/Chiếu-Trúc-Cao-Bằng-Chiếu-trúc-cá-nhân-i.81313558.19277857647
+match = -666.7%%
+title = 1/4
+url = https://shopee.vn/Chiếu-Trúc-Tre-Cao-Bằng-Xịn-Các-Cỡ-0.8m-0.9m-1m-1.2m-1.4m-1.5m-1.6m-1.8m-2m-i.182611643.17934077095
 
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html?srsltid=AfmBOoo1jPRYnA_qbHOhfRw_5RhzV3C38uo9hvMVZK-2pjus2LuDDCdG
 
 [chuyenhangviet.com]
 match = -43.5%%
@@ -33,8 +33,8 @@ url = https://m.facebook.com/497069713692846/videos/1865016670231470/?__so__=wat
 
 [chieutrucsaigon.com]
 match = -17.4%%
-title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
+title = CHIẾU TRÚC CAO BẰNG 1M GIÁ RẺ LOẠI 1 TẠI TPHCM
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-cao-bang-1m-gia-re-tai-tphcm-69.html
 
 [demxanh.com]
 match = -21.7%%
@@ -72,9 +72,9 @@ title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
 url = https://www.facebook.com/chieutruccaobangcbg/
 
 [www.youtube.com]
-match = -87.0%%
-title = Tổng bí thư Nguyễn Phú Trọng trong mắt người bạn Nga ...
-url = https://www.youtube.com/watch?v=NJVV5Mu6pvU
+match = -95.7%%
+title = Vietnam Food Tour - Cao Bằng | Cấp độ 999: Nơi phải đến ...
+url = https://www.youtube.com/watch?v=GjtcXliMKjM
 
 [khodem.vn]
 match = -56.5%%
