--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-26 18:33:58
+lastsearch = 2024-07-26 18:50:14
 
 [shopee.vn]
 match = 25.0%%
@@ -52,9 +52,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [m.facebook.com]
-match = -118.8%%
-title = HR - TUYỂN DỤNG | Em xin phép lạc lối chút ạ
-url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8361335013890472/
+match = -175.0%%
+title = Sơ lược về làng nghề dệt chiếu tại Long Định - Cần Đước
+url = https://m.facebook.com/notes/cộng-đồng-long-an/sơ-lược-về-làng-nghề-dệt-chiếu-tại-long-định-cần-đước/402374479949088/
 
 [baolongan.vn]
 match = -125.0%%
