--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-26 17:54:56
+lastsearch = 2024-07-26 18:48:50
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -14,7 +14,7 @@ url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome
 [demxanh.com]
 match = -19.0%%
 title = Đệm bông ép chính hãng giảm 50 ...
-url = https://demxanh.com/dem-bong-ep.html
+url = https://demxanh.com/dem-bong-ep.html?srsltid=AfmBOooNm64lT14MD6qRa0W_v82XCJ_-_jPyWDtSB_44qiy5mAaBTkCT
 
 [www.ebay.com]
 match = -100.0%%
@@ -39,7 +39,7 @@ url = https://thegioidemviet.vn/dem-cao-su-kim-cuong/
 [www.diepxuan.com]
 match = -61.9%%
 title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome.html
+url = https://www.diepxuan.com/nem-everhome.html?srsltid=AfmBOooROaVwVEcOfphaXftL1ztSzQ_yV3cb20Mn00kyAnkbo6PTQ1Zp
 
 [bachhoadem.vn]
 match = 28.6%%
@@ -52,9 +52,9 @@ title = Đệm Bông ép Everhome Vỏ TC
 url = https://demsingapore.com/dem-bong-ep-everhome-vo-tc.html
 
 [demviethome.vn]
-match = -52.4%%
-title = Tổng kho đệm bông ép chính hãng tại Hà Nội
-url = https://demviethome.vn/dem-bong-ep/
+match = -57.1%%
+title = Đệm bông ép Everhome gấm xốp giá rẻ hà nội. ...
+url = https://demviethome.vn/dem-bong-ep-everhome-gam-xop/?srsltid=AfmBOorCCeUXlmQtHX_-DKwfHh_16sAnWb80qboRBHUPap6nC0eCsHfw
 
 [www.tiktok.com]
 match = -95.2%%
