--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-07-26 17:48:29
+lastsearch = 2024-07-26 19:01:19
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -87,9 +87,9 @@ title = Giường xếp gọn - Thiết bị gia dụng SUMIKA
 url = https://sumika.vn/giuong-xep-gon-846
 
 [noithatanhuy.com.vn]
-match = -5.0%%
-title = Bộ giường tủ giá rẻ mẫu 15 - Nâu
-url = https://noithatanhuy.com.vn/bo-giuong-tu-gia-re-mau-15-nau
+match = -20.0%%
+title = Bộ giường tủ giá rẻ mẫu 15 - Vân gỗ
+url = https://noithatanhuy.com.vn/bo-giuong-tu-gia-re-mau-15-van-go
 
 [flexhouse.vn]
 match = -55.0%%
