--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-26 18:42:04
+lastsearch = 2024-07-26 18:50:56
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -52,9 +52,9 @@ title = Thảm Trải Sofa Giá Tốt T06/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tham-trai-sofa/
 
 [tiki.vn]
-match = -59.1%%
-title = Thảm trải chân giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm trải chân giường
+match = -90.9%%
+title = Thảm trải sàn phòng khách 2m x 2m hàng chính hãng, ...
+url = https://tiki.vn/search?q=thảm trải sàn phòng khách 2m x 2m
 
 [cafeland.vn]
 match = -109.1%%
@@ -67,9 +67,9 @@ title = Đệm bông ép Everon 1m5 (1.5m) | Chính hãng, Giá tốt tại ...
 url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m5.html
 
 [shopee.vn]
-match = -54.5%%
-title = thảm chân giường giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm chân giường
+match = -109.1%%
+title = Thảm lông trải sàn lót sàn phòng khách trải giường phòng ...
+url = https://shopee.vn/Thảm-lông-trải-sàn-lót-sàn-phòng-khách-trải-giường-phòng-ngủ-thảm-lông-trắng-loang-mịn-chụp-ảnh-hình-tròn-vuông-1m6x2m-i.472596491.3194973741
 
 [www.kymdan.com]
 match = -18.2%%
