--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-26 17:49:56
+lastsearch = 2024-07-26 18:44:23
 
 [bilystore.vn]
 match = -95.2%%
 title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-trai-san-phong-ngu/
+url = https://bilystore.vn/tham-trai-san-phong-ngu/?srsltid=AfmBOooKjlM8y7MlSXI52KOLDssq2PeSM5EUTGsPkL-_GtMYF6-oq034
 
 [shopee.vn]
 match = -52.4%%
@@ -124,7 +124,7 @@ url = https://giuongxep.com/
 [www.lazada.vn]
 match = -23.8%%
 title = Thảm trải giường nỉ nhung hàng đẹp loại 1
-url = https://www.lazada.vn/products/tham-trai-giuong-ni-nhung-hang-dep-loai-1-i472246006.html
+url = https://www.lazada.vn/products/tham-trai-giuong-ni-nhung-hang-dep-loai-1-i472246006.html?srsltid=AfmBOopY52x-qgzEMwx3QOCnKqMhcY0vzTZIp4sBxS02dwYWT5_wEQxi
 
 [bvhungvuong.vn]
 match = -85.7%%
