--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-07-26 18:19:49
+lastsearch = 2024-07-26 19:22:53
 
 [shopee.vn]
 match = -57.1%%
@@ -17,9 +17,9 @@ title = Thảm Lót Chân Giường Lớn 80cm x 2 mét (15)
 url = https://khosibaclieu.com/tham-lot-chan-giuong-lon-80cm-x-2-met-15
 
 [www.sendo.vn]
-match = -76.2%%
-title = Thảm Chân Giường Siêu Chất, Giá Gốc, Hàng Mới Mỗi Ngày
-url = https://www.sendo.vn/tham-chan-giuong.htm
+match = -19.0%%
+title = thảm trải giường [Được kiểm hàng] 23162672
+url = https://www.sendo.vn/tham-trai-giuong-duo-c-kie-m-ha-ng-23162672-117151315.html
 
 [tiki.vn]
 match = -38.1%%
@@ -37,9 +37,9 @@ title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường 
 url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [comehome.com.vn]
-match = -119.0%%
-title = 15 Mẫu giường ngủ đôi kích thước chuẩn, đẹp, giá rẻ nhất ...
-url = https://comehome.com.vn/blog/post/giuong-ngu-doi
+match = -114.3%%
+title = Các loại giường ngủ đẹp, phổ biến thông dụng nhất hiện nay
+url = https://comehome.com.vn/blog/post/cac-loai-giuong-ngu
 
 [www.kymdan.com]
 match = 14.3%%
@@ -47,9 +47,9 @@ title = bảng giá sản phẩm kymdan
 url = https://www.kymdan.com/bai-viet/bang-gia-san-pham-kymdan
 
 [www.lazada.vn]
-match = -76.2%%
-title = Thảm Trải Giường Đa Năng. thảm nhung cao cấp trải ...
-url = https://www.lazada.vn/products/tham-trai-giuong-da-nang-tham-nhung-cao-cap-trai-giuong-am-ap-tang-kem-2-vo-goi-cung-loai-kt-16-x-2m-i872064502.html
+match = -109.5%%
+title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
 
 [www.facebook.com]
 match = 33.3%%
@@ -162,9 +162,9 @@ title = [2024] Top 12 Loại Nệm Giường tốt nhất [Tư Vấn Từ ...
 url = https://vn.my-best.com/16721
 
 [xuongnoithatxuatkhau.vn]
-match = -52.4%%
-title = Giường ngủ bọc đệm Emmett chân kim loại
-url = https://xuongnoithatxuatkhau.vn/san-pham/giuong-ngu-boc-dem-emmett-chan-kim-loai/
+match = -42.9%%
+title = Giường ngủ bọc đệm Andes chân kim loại
+url = https://xuongnoithatxuatkhau.vn/san-pham/giuong-ngu-boc-dem-andes-chan-kim-loai/
 
 [lovemama.vn]
 match = -123.8%%
@@ -175,4 +175,9 @@ url = https://lovemama.vn/ga-giuong-cham-chong-tham-loai-1
 match = -66.7%%
 title = Top 6 loại nệm tốt nhất cho giường khung năm 2024
 url = https://demxanh.com/nem-tot-nhat-cho-khung-giuong.html
+
+[khonemtonghop.com]
+match = -95.2%%
+title = 15+ Loại Vải May Ga Giường đang được ưa Chuộng Nhất ...
+url = https://khonemtonghop.com/vai-may-ga-giuong-dang-duoc-ua-chuong-nhat/
 
