--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-26 16:22:09
+lastsearch = 2024-07-26 19:26:22
 
 [shopee.vn]
 match = -216.7%%
@@ -47,9 +47,9 @@ title = Thảm ghế, nệm ghế gỗ kích thước 2m x 60cm các màu nâu
 url = https://tiki.vn/tham-ghe-nem-ghe-go-kich-thuoc-2m-x-60cm-cac-mau-nau-p89638136.html
 
 [suongtuyet.com]
-match = -133.3%%
-title = Nên Mua Thảm Lót Ghế Gỗ Hay Đệm Ghế Gỗ?
-url = https://suongtuyet.com/nen-mua-tham-lot-ghe-go-hay-dem-ghe-go.html
+match = -125.0%%
+title = Bộ Sưu Tập Đệm Ghế Gỗ Đẹp Nhất 2024
+url = https://suongtuyet.com/bo-suu-tap-nem-ghe-go-dep-gia-re-cho-gia-dinh.html
 
 [nemkimcuong.vn]
 match = -191.7%%
