CI images update

--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-26 17:27:27
+lastsearch = 2024-07-26 20:16:54
 
 [shopee.vn]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = 10+ mẫu chiếu điều hoà hot nhất năm
 url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 
 [sieuthidem.vn]
-match = 16.7%%
-title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
+match = 50.0%%
+title = Chiếu điều hoà Tencel - Hà Nội
+url = https://sieuthidem.vn/product-category/chan-ga-goi/chieu-dieu-hoa-tencel/
 
 [lybalansieucute.com]
 match = 29.2%%
@@ -180,4 +180,9 @@ url = https://www.facebook.com/groups/753270865357544/
 match = 12.5%%
 title = Chiếu Điều Hòa LATEX Cao Su Thế Hệ Mới CDH16
 url = https://www.bettybedding.vn/chieu-dieu-hoa-latex-cao-su-the-he-moi-cdh16-1
+
+[www.youtube.com]
+match = -70.8%%
+title = HÀNG GIẢM GIÁ - Chiếu điều hòa nhật 2 mặt - nằm êm ngủ ...
+url = https://www.youtube.com/watch?v=fhwNXjU32Ww
 
