--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-26 15:29:13
+lastsearch = 2024-07-26 20:28:46
 
 [shopee.vn]
-match = -28.0%%
-title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
-url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
+match = -8.0%%
+title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
+url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
 
 [tiki.vn]
-match = -16.0%%
-title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu trúc đài loan
+match = 16.0%%
+title = Mua Chiếu trúc Đài Loan mặt trúc mặt lụa
+url = https://tiki.vn/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-mat-lua-p10764702.html?itm_campaign=tiki-reco_UNK_DT_UNK_UNK_seller-widget_UNK_seller-widget-v1_202310100600_MD_batched_PID.252844218&itm_medium=CPC&itm_source=tiki-reco&spid=252844218
 
 [hoanglongcms.com]
 match = -24.0%%
@@ -310,4 +310,9 @@ url = https://xaydungchinhsach.chinhphu.vn/tan-sinh-vien-canh-giac-nhung-chieu-t
 match = 8.0%%
 title = Đài Loan chuẩn bị đón bão Gaemi
 url = https://littlesaigontv.com/dai-loan-chuan-bi-don-bao-gaemi/
+
+[www.lazada.vn]
+match = -12.0%%
+title = Chiếu trúc thanh gập đôi Đài Loan mặt trúc mặt lụa
+url = https://www.lazada.vn/products/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-mat-lua-i1378170940.html
 
