--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-26 18:58:12
+lastsearch = 2024-07-26 20:28:02
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -227,9 +227,9 @@ title = How Blocking Blue Light at Night Helps You Sleep
 url = https://www.healthline.com/nutrition/block-blue-light-to-sleep-better
 
 [www.uscis.gov]
-match = -42.9%%
-title = Chào Mừng Quý Vị Đến Hoa Kỳ
-url = https://www.uscis.gov/sites/default/files/document/guides/M-618_v.pdf
+match = -50.0%%
+title = Explore my Options | USCIS
+url = https://www.uscis.gov/forms/explore-my-options
 
 [bluebottlecoffee.com]
 match = -221.4%%
