--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-26 19:23:33
+lastsearch = 2024-07-26 20:18:16
 
 [eva.vn]
 match = -131.6%%
@@ -49,7 +49,7 @@ url = https://books.google.com/books?id=oC8iDAAAQBAJ&pg=PA325&lpg=PA325&dq=chieu
 [www.diepxuan.com]
 match = 5.3%%
 title = Chiếu cây mộc hoa 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html?srsltid=AfmBOoqf0f7b2l8FSBCuN9cHqp1WH4u8oXhP5j--6SOdHfZ0pypEwoqX
+url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html
 
 [mietistudio.com]
 match = -131.6%%
@@ -72,9 +72,9 @@ title = Cây dành dành có tác dụng gì?
 url = https://www.vinmec.com/vie/bai-viet/cay-danh-danh-co-tac-dung-gi-vi/
 
 [www.youtube.com]
-match = -147.4%%
-title = 3 Yếu tố giúp cây hoa Mộc hương phát triển nhanh cây khoẻ ...
-url = https://www.youtube.com/watch?v=ASsdVo0WBew
+match = -84.2%%
+title = GIÁNG HƯƠNG - MỘT TRONG NHỮNG CÂY ĐƯỢC LỰA ...
+url = https://www.youtube.com/watch?v=4b4I5bw-Mw0
 
 [trungquang.com]
 match = 0.0%%
