--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-26 18:21:12
+lastsearch = 2024-07-26 20:19:59
 
 [demtot.com]
-match = 23.8%%
-title = Đệm lò xo cối trụ Adaptive
-url = https://demtot.com/dem-lo-xo-coi-tru-adapive/
+match = 4.8%%
+title = Tag Archives: đệm lò xo
+url = https://demtot.com/tag/dem-lo-xo/
 
 [tuananh.vn]
 match = 52.4%%
@@ -22,14 +22,14 @@ title = Đệm lò xo Techwood 180x200x25cm giá tốt Tháng 7, 2024
 url = https://shopee.vn/search?keyword=Đệm lò xo Techwood 180x200x25cm
 
 [demxanh.com]
-match = -52.4%%
-title = Đệm lò xo 1m8x2m (180x200cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html
+match = -95.2%%
+title = Nệm lò xo Tuấn Anh có tốt không? Chọn loại đệm nào phù ...
+url = https://demxanh.com/nem-lo-xo-tuan-anh-co-tot-khong-chon-loai-dem-nao-phu-hop.html
 
 [maybedding.vn]
-match = 33.3%%
-title = Đệm lò xo Tuấn Anh Techwood 20cm
-url = https://maybedding.vn/products/dem-lo-xo-techwood
+match = 38.9%%
+title = Đệm lò xo Tuấn Anh
+url = https://maybedding.vn/collections/dem-lo-xo-tuan-anh
 
 [thegioidemtot.vn]
 match = 77.8%%
@@ -57,9 +57,9 @@ title = Đệm lò xo Hàn Việt Hải giá rẻ
 url = https://demsingapore.com/dem-lo-xo-han-viet-hai.html
 
 [lombom.com]
-match = -133.3%%
-title = Tổng kho nệm - đệm chính hãng khuyến mại 20-60%% Freeship!
-url = https://lombom.com/dem-nem/page/2/
+match = -119.0%%
+title = Nơi cung cấp nệm đệm lò xo cao cấp chính hãng tại Việt Nam!
+url = https://lombom.com/dem-lo-xo/
 
 [www.linkedin.com]
 match = 4.8%%
