--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-26 17:21:58
+lastsearch = 2024-07-26 20:22:49
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -17,13 +17,13 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -36.4%%
-title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 - Lazada
+match = -86.4%%
+title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
 
 [flexhouse.vn]
-match = -50.0%%
-title = Thảm tròn trải chân giường trong phòng ngủ ...
+match = -104.5%%
+title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
 url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
 
 [ochino.com]
@@ -32,9 +32,9 @@ title = (FREESHIP) Thảm chân giường, thảm bếp dài ...
 url = https://ochino.com/freeship-tham-chan-giuong-tham-bep-dai-1m6-50-chat-day-dep-hang-co-san/
 
 [decoviet.vn]
-match = -36.4%%
-title = Showroom Thảm Sofa Giá Rẻ Tại Bình Dương
-url = https://decoviet.vn/tham-sofa-binh-duong/
+match = 22.2%%
+title = Thảm Sofa Biên Hòa
+url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [shopee.vn]
 match = -50.0%%
@@ -42,9 +42,9 @@ title = thảm trải sàn giá tốt Tháng 6, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải sàn
 
 [blanc.vn]
-match = -104.5%%
-title = Thảm trải sàn BLANC' | Thảm lông, thảm dệt 3D đổi trả ...
-url = https://blanc.vn/tham-trai-san
+match = -9.1%%
+title = Thảm trải sàn Osa lông thú nhân tạo
+url = https://blanc.vn/tham-kobe
 
 [demxanh.com]
 match = -27.3%%
@@ -82,8 +82,8 @@ title = Căn hộ cho thuê tại Bras-Panon, Saint-Benoît, Réunion - Airbnb
 url = https://www.airbnb.com.vn/rooms/1104230023148123684
 
 [comehome.com.vn]
-match = -113.6%%
-title = TOP mẫu giường tầng cho bé trai, bé gái, giường tầng trẻ ...
+match = -40.9%%
+title = TOP mẫu giường tầng cho bé trai, bé gái ...
 url = https://comehome.com.vn/blog/post/mau-giuong-tang-cho-be
 
 [anawood.vn]
