--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-26 18:49:53
+lastsearch = 2024-07-26 20:24:34
 
 [noithathomy.com]
 match = -42.9%%
@@ -37,9 +37,9 @@ title = Thảm Trải Sàn 1 6
 url = https://websosanh.vn/s/thảm+trải+sàn+1+6.htm
 
 [www.tiktok.com]
-match = -23.8%%
-title = Abuza King Kuhusu Iphone Document
-url = https://www.tiktok.com/discover/abuza-king-kuhusu-iphone-document
+match = -71.4%%
+title = 💥💥 50 MẪU THẢM TRẢI SÀN BALI NHẬP KHẨU CAO CẤP ...
+url = https://www.tiktok.com/@giadung_tienich2/video/7300064357969317128
 
 [iprice.vn]
 match = -19.0%%
