--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -24,7 +24,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = -25.0%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoq1lAcGhiR-VImZxE2ti_WDdogihb2t6A1RpzlAb3SosZDvm_DB
 
 [giadunganhvan.vn]
 match = 70.8%%
@@ -52,9 +52,9 @@ title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào 
 url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [www.lazada.vn]
-match = -50.0%%
-title = Chiếu điều hoà mát lạnh tặng kèm 2 bao gối 1.6 x 2. m , ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-mat-lanh-tang-kem-2-bao-goi-16-x-2-m-chieu-cao-su-tran-3-lop-mem-min-i2412274423.html
+match = -33.3%%
+title = Chiếu Mây Điều Hòa Hàng Xuất Khẩu Cao Cấp,Đủ kích cỡ
+url = https://www.lazada.vn/products/chieu-may-soi-nho-dieu-hoa-chieu-dieu-hoa-16-x-19m-chieu-may-dieu-hoa-hang-xuat-khau-cao-capdu-kich-co-chieu-du-lich-chieu-an-com-chieu-trai-giuong-i2106465649.html?srsltid=AfmBOorh0VF8wxm0kIVTpq8T8LXSIltZ9etKNg2wLhIeHB9Orvqd0nsu
 
 [ababy.com.vn]
 match = -4.2%%
@@ -89,7 +89,7 @@ url = https://xn--nekiovitnam-y69e.vn/bang-gia-chieu-may-dieu-hoa-2023/
 [vtvhyundai.vn]
 match = -37.5%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOorUD05f5oxtMME_l1n0Kq249EO3RG34y95jv-yKzA-yqhFh5eav
 
 [nemuytin.com]
 match = -41.7%%
