--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-26 17:27:46
+lastsearch = 2024-07-26 20:31:10
 
 [shopee.vn]
 match = 18.5%%
@@ -22,9 +22,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [foreverbedding.net]
-match = -59.3%%
-title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
+match = 0.0%%
+title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [kyoryo.vn]
 match = -40.7%%
@@ -160,4 +160,9 @@ url = https://www.congnghieptieudung.vn/su-that-ve-cong-dung-cua-chieu-dieu-hoa-
 match = -22.2%%
 title = Chiếu điều hòa cao su non loại tốt - Mẫu 4 - Nệm Uy Tín
 url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-4/
+
+[joliefam.vn]
+match = -37.0%%
+title = Top 3 các loại chiếu điều hòa cao cấp được ưa chuộng ...
+url = https://joliefam.vn/chieu-dieu-hoa-cao-cap/
 
