--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-07-26 18:33:38
+lastsearch = 2024-07-26 20:34:40
 
 [thegioidemviet.vn]
 match = 35.7%%
@@ -29,7 +29,7 @@ url = https://shopee.vn/-Ảnh-thật-100-Chiếu-trúc-Quế-Lâm-loại-1-cao-
 [demxanh.com]
 match = -25.0%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOooVIM0WGZFco_N51HjdrOqz4kxnephZBysXF06tjoHY-WTm3mmk
 
 [tiki.vn]
 match = -39.3%%
