--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-07-26 20:18:39
 [us.misumi-ec.com]
 match = -325.0%%
 title = GA16-16-6 | Enclosures - ABS Box, Water/Dust Proof, GA ...
-url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6
+url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6&srsltid=AfmBOopoI6bsqPtPAROsmHGpX3qQgV-fSfQCnJBUyVzd1mbIZCp8uqfP
 
 [www.amazon.com]
 match = -183.3%%
