--- a/images/nem-dreamland-uc-120x190x09/config.ini
+++ b/images/nem-dreamland-uc-120x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-dreamland-uc-120x190x09.html
 lastopen = 2024-06-06 16:44:51
 
 [search]
-lastsearch = 2024-07-26 16:56:57
+lastsearch = 2024-07-26 20:32:37
 
 [www.diepxuan.com]
 match = 44.4%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOore4u3GryOz3vItwVYwOby4hcyKVb7W2bXLDSXfo_uO2qg47kfZ
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [www.michaelmarkowski.com]
 match = -100.0%%
