--- a/images/nem-everon-140x200x9/config.ini
+++ b/images/nem-everon-140x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-140x200x9.html
 lastopen = 2024-06-06 17:10:12
 
 [search]
-lastsearch = 2024-07-26 15:46:11
+lastsearch = 2024-07-26 20:33:36
 
 [www.everonvn.vn]
 match = -120.0%%
@@ -22,9 +22,9 @@ title = Tổng Đại Lý Chăn Ga Gối Đệm Everon Artemis King Koil
 url = https://everon.online/collections/dem-everon-kich-thuoc-1m4-140-190-140-200-140x190-140x200
 
 [elec-horeca.com]
-match = 10.0%%
-title = Đại Lý Nệm Everon tại Đà Nẵng
-url = https://elec-horeca.com/dai-ly-nem-everon-tai-da-nang-id279.html
+match = -40.0%%
+title = Đại lý phân phối nệm tại Đà Nẵng
+url = https://elec-horeca.com/nem-chinh-hang-d9.html
 
 [tiki.vn]
 match = -20.0%%
