--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-07-26 19:22:53
+lastsearch = 2024-07-26 20:35:23
 
 [shopee.vn]
 match = -57.1%%
@@ -34,12 +34,12 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -119.0%%
 title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOoqPL5FSSbR2MPyp3xVFuqdPMuYCrusr_e6AYWX_D8igLqVEJj8m
 
 [comehome.com.vn]
-match = -114.3%%
-title = Các loại giường ngủ đẹp, phổ biến thông dụng nhất hiện nay
-url = https://comehome.com.vn/blog/post/cac-loai-giuong-ngu
+match = -119.0%%
+title = 15 Mẫu giường ngủ đôi kích thước chuẩn, đẹp, giá rẻ nhất ...
+url = https://comehome.com.vn/blog/post/giuong-ngu-doi
 
 [www.kymdan.com]
 match = 14.3%%
