--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-26 17:27:08
+lastsearch = 2024-07-26 20:34:19
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = -15.0%%
-title = Christina Mangurian, MD, MAS
-url = https://profiles.ucsf.edu/christina.mangurian
+match = 10.5%%
+title = Frederick Hecht, MD
+url = https://profiles.ucsf.edu/frederick.hecht
 
 [cityofclovis.com]
 match = -65.0%%
@@ -47,9 +47,9 @@ title = ADG465 Datasheet by Analog Devices Inc. | Digi-Key Electronics
 url = https://www.digikey.jp/htmldatasheets/production/51516/0/0/1/adg465.html
 
 [fsapartners.ed.gov]
-match = -60.0%%
-title = 2023-2024 Federal School Code List Q1
-url = https://fsapartners.ed.gov/sites/default/files/2022-10/2324FedSchoolCodeList.xlsx
+match = -45.0%%
+title = 2023-2024 Federal School Code List
+url = https://fsapartners.ed.gov/sites/default/files/2022-11/2324FedSchoolCodeList.pdf
 
 [finaid.org]
 match = 0.0%%
@@ -172,9 +172,9 @@ title = EPA's Reanalysis of Key Issues Related to Dioxin Toxicity and ...
 url = https://cfpub.epa.gov/ncea/iris/iris_documents/documents/supdocs/dioxinv1sup.pdf
 
 [cps-vo.org]
-match = -130.0%%
-title = Attendees | Cyber-Physical Systems Virtual Organization
-url = https://cps-vo.org/group/satc-pimtg22/attendees
+match = -140.0%%
+title = Registrants | Cyber-Physical Systems Virtual Organization
+url = https://cps-vo.org/group/satc-pimtg22/registrants
 
 [backend.daikincomfort.com]
 match = -28.6%%
