CI images update

--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-26 13:37:11
+lastsearch = 2024-07-26 20:50:10
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -312,7 +312,7 @@ title = U23 Argentina nhận cú sốc trước Morocco - Thể thao
 url = https://znews.vn/u23-argentina-nhan-cu-soc-truoc-morocco-post1488112.html
 
 [baochinhphu.vn]
-match = -193.8%%
-title = Chủ tịch nước Tô Lâm thăm Trung tâm Điều dưỡng thương ...
-url = https://baochinhphu.vn/chu-tich-nuoc-to-lam-tham-trung-tam-dieu-duong-thuong-binh-thuan-thanh-102240724170415456.htm
+match = -162.5%%
+title = Cử tri Khánh Hòa ủng hộ sắp xếp lại đơn vị hành ...
+url = https://baochinhphu.vn/cu-tri-khanh-hoa-ung-ho-sap-xep-lai-don-vi-hanh-chinh-cap-xa-102240726163306545.htm
 
