--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-26 18:30:09
+lastsearch = 2024-07-26 21:01:03
 
 [www.tui.co.uk]
-match = -233.3%%
-title = Holiday Destinations & Inspiration 2024 / 2025
-url = https://www.tui.co.uk/destinations/holiday-destinations
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+url = https://www.tui.co.uk/
 
 [uk.trip.com]
-match = -233.3%%
-title = Book Cheap TUI Airways Limited Flights to Seoul
+match = 0.0%%
+title = 
 url = https://uk.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sel/
 
 [www.diepxuan.com]
@@ -112,9 +112,9 @@ title = All Bags | DeMellier | Shop now
 url = https://demellierlondon.com/collections/all-bags
 
 [www.telegraph.co.uk]
-match = -341.7%%
-title = The US Navy's new missile has restored the lost era of Top ...
-url = https://www.telegraph.co.uk/news/2024/07/17/us-navy-sm-6-fighter-jet-missile-bvr-tomcat-phoenix-top-gun/
+match = -308.3%%
+title = North Korean hackers stole military secrets, FBI reveals
+url = https://www.telegraph.co.uk/world-news/2024/07/25/north-korean-hackers-stole-military-secrets-fbi-reveals/
 
 [www.oneworld.com]
 match = -283.3%%
@@ -162,9 +162,9 @@ title = Army Staff Sergeant Visala Tui
 url = https://www.buildinghomesforheroes.org/meet-our-heroes/army-staff-sergeant-visala-tui/
 
 [www.youtube.com]
-match = -175.0%%
-title = Korean Dham Doi (Tan Tui) Interpretation
-url = https://www.youtube.com/watch?v=9KjmM8FLEqE
+match = -316.7%%
+title = 🔴 LIVE: The Legendary Cargolux Retro 747 & More Land at ...
+url = https://www.youtube.com/watch?v=CLfcPppzI-8
 
 [www.thenaturaladventure.com]
 match = -283.3%%
@@ -380,4 +380,14 @@ url = https://www.ch-aviation.com/news/139065-tui-group-set-to-end-b737-700-ops-
 match = -33.3%%
 title = Túi Đeo Chéo Basic Korea
 url = https://chip.vn/products/tui-deo-cheo-basic-korea?srsltid=AfmBOopSlKVJsfoZ1481EG2-ORjAkF6Np2U80ttpSNEBjPlt50woOfJI
+
+[www.phocuswire.com]
+match = -308.3%%
+title = Meet the 18 finalists of the Phocuswright/WiT Global ...
+url = https://www.phocuswire.com/18-finalists-phocuswright-wit-global-startup-pitch-2024
+
+[runwaygirlnetwork.com]
+match = -341.7%%
+title = Press Release: How SkyTeam is helping unite industry on ...
+url = https://runwaygirlnetwork.com/2024/07/the-aviation-challenge-skyteam/
 
