--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-26 12:31:42
+lastsearch = 2024-07-26 20:56:45
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -32,9 +32,9 @@ title = Mechanosensitive Channel PIEZO1 Senses Shear Force to ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 
 [books.google.com]
-match = -200.0%%
-title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
-url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0tcv05Kh&sig=ACfU3U1GaVMlrjcUqeZ0YENn5mhukliM4g&hl=en&sa=X&ved=2ahUKEwjVwoPS3sOHAxWgIzQIHUd9HvMQ6AF6BAgaEAM
+match = -11.8%%
+title = Cumulated Index Medicus
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWDHYoZe&sig=ACfU3U06ZC5FUHB74c5Mb9b4dPWIuW6ibA&hl=en&sa=X&ved=2ahUKEwjt2omO7sSHAxVMElkFHe8KDwAQ6AF6BAhBEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -245,4 +245,9 @@ url = https://www.frontiersin.org/journals/neuroscience/articles/10.3389/fnins.2
 match = 0.0%%
 title = 
 url = https://www.sweetwater.com/store/detail/K12--qsc-k12-1000w-12-inch-powered-speaker/reviews
+
+[gvac.haus-umbau.eu]
+match = -41.2%%
+title = Kpop Nickname - Haus-Umbau.org
+url = https://gvac.haus-umbau.eu/kpop-nickname.html
 
