--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-26 16:33:15
+lastsearch = 2024-07-26 20:47:26
 
 [helloviettravel.com]
 match = -181.2%%
@@ -19,7 +19,7 @@ url = http://saovangtravel.com/du-lich-x/du-lich-xuyen-viet-19-ngay-18-dem/
 [hanhhuonghoasen.com.vn]
 match = -50.0%%
 title = DU LỊCH XUYÊN VIỆT 18N17D GIÁ RẺ
-url = https://hanhhuonghoasen.com.vn/du-lich-xuyen-viet
+url = https://hanhhuonghoasen.com.vn/du-lich-xuyen-viet?srsltid=AfmBOoob3B2KkO2b45EfrjLzDMGMTx0zOU7PaSWS9VbCc-ZXo3xJGnin
 
 [vtv.vn]
 match = -181.2%%
