--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-26 17:14:17
+lastsearch = 2024-07-26 20:50:29
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,9 +67,9 @@ title = Giữ nghề dệt chiếu Long Cang
 url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
-match = -200.0%%
-title = Tin Bóng Đá 26/7: MU CHIÊU MỘ MARTIN ZUBIMENDI, 5 TÀI ...
-url = https://www.youtube.com/watch?v=E0zppQi5xQ8
+match = -106.2%%
+title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
+url = https://www.youtube.com/watch?v=D5B7MtNy_kM
 
 [books.google.com]
 match = -218.8%%
