--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-26 17:24:40
+lastsearch = 2024-07-26 20:57:08
 
 [m.youtube.com]
 match = -144.4%%
@@ -23,13 +23,13 @@ url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [www.facebook.com]
 match = -105.6%%
-title = Người Việt Omaha Nebraska USA | 💥 NEM CUA BỂ ...
-url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
+title = NEM CUA BỂ - NGON PHÁT NGHIỆN, TIỆN NẤU NGAY ...
+url = https://www.facebook.com/cuonnrollvn/videos/nem-cua-bể-ngon-phát-nghiện-tiện-nấu-ngay/248935103794915/
 
 [www.tiktok.com]
-match = -127.8%%
-title = Nem giã tay Đại Hà siêu phẩm Kiến Thuỵ 😍 #ThauDiDau ...
-url = https://www.tiktok.com/@thaudidau/video/7148386543554563354?lang=en
+match = -177.8%%
+title = Buffet nem nướng - tranh giành đồ ăn mới thấy đồ ăn đáng ...
+url = https://www.tiktok.com/@nayphanhreview/video/7240008987255721221
 
 [www.youtube.com]
 match = -133.3%%
@@ -44,7 +44,7 @@ url = https://www.grab.com/vn/en/food-blog/trending-food/tphcm-bun-nem-nuong-sie
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOopyboT4o8PwH1MWpshR-JXz6frbebh8PDlzHvSUPcRBcZxFRiSq
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [shopcamping.vn]
 match = -144.4%%
