--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-26 18:44:23
+lastsearch = 2024-07-26 20:59:36
 
 [bilystore.vn]
 match = -95.2%%
 title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-trai-san-phong-ngu/?srsltid=AfmBOooKjlM8y7MlSXI52KOLDssq2PeSM5EUTGsPkL-_GtMYF6-oq034
+url = https://bilystore.vn/tham-trai-san-phong-ngu/
 
 [shopee.vn]
 match = -52.4%%
