--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-07-26 17:37:17
+lastsearch = 2024-07-26 21:30:43
 
 [everonvn.com.vn]
 match = 7.4%%
 title = Bộ Artemis Tk Giảm Giá - Everon
-url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia?srsltid=AfmBOoqv5Qb0Ik9P2jt6zi6ACRcNpinRBNQfINf3RF4ForkgQUFmd6PZ
+url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia
 
 [everon.com.vn]
 match = 40.0%%
 title = BỘ EVERON EPM 19064 Modal
-url = https://everon.com.vn/epm-19064/?srsltid=AfmBOoogY6bMv_ThiWVG8YDaXsY6gOhPAmThP6izUNRVDftmsfzc59xn
+url = https://everon.com.vn/epm-19064/
 
 [demxanh.com]
 match = 18.5%%
 title = Bộ chăn ga gối EVeron EPM19068
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html?srsltid=AfmBOoqLHV471BpUgvS8dk_ADDjgL_GQrekK6DpGo_HQ89WUIJz3GJix
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
 
 [shopee.vn]
 match = -48.1%%
