--- a/images/chieu-dieu-hoa-khong-goi-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-18.html
 lastopen = 2024-06-09 22:26:01
 
 [search]
-lastsearch = 2024-07-26 20:30:28
+lastsearch = 2024-07-26 21:40:24
 
 [demxanh.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
 url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
-match = -25.9%%
-title = Chiếu điều hòa có mát không? Loại nào tránh nóng tốt nhất?
-url = https://shopee.vn/blog/chieu-dieu-co-mat-khong/
+match = 0.0%%
+title = chiếu điều hoà giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hoà
 
 [demviethome.vn]
 match = 14.8%%
