--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-26 16:58:00
+lastsearch = 2024-07-26 21:32:47
 
 [shopee.vn]
 match = -65.2%%
@@ -39,7 +39,7 @@ url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-
 [www.lazada.vn]
 match = -17.4%%
 title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
-url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html?srsltid=AfmBOorDdWyAt3Ym2dOxGJEqOSPikjGPeyMD3qgAzHdQSGPQHVngMSaY
 
 [chuyenhangviet.com]
 match = -73.9%%
@@ -64,7 +64,7 @@ url = https://demhong.vn/chieu-tre-viet-pho-men/
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu nhựa Thái Bình 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html?srsltid=AfmBOoox1XjFJ_1X6uAIMXRV40wiHXIGuMU43bXvrt-JQIa2u8KXBFFr
 
 [h5.lazada.vn]
 match = -17.4%%
