--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-26 18:27:45
+lastsearch = 2024-07-26 21:34:09
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -100.0%%
-title = Nem Dubrovnik unveils its 10 Keynote Speakers for 10 ...
-url = https://www.formatbiz.it/dettNews.aspx?id=9944
+match = -95.2%%
+title = NEM Dubrovnik 2023, Day 2: record number of decision ...
+url = https://www.formatbiz.it/dettNews.aspx?id=10170
 
 [yro.slashdot.org]
 match = -114.3%%
