--- a/images/nem-foam-dreamland-uc-160x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-160x200x20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-160x200x20.html
 lastopen = 2024-06-07 00:23:34
 
 [search]
-lastsearch = 2024-07-26 20:45:11
+lastsearch = 2024-07-26 21:32:06
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = Đệm Memory Foam Massage Kawaii Dreamland
 url = https://shopee.vn/Đệm-Memory-Foam-Massage-Kawaii-Dreamland-Nệm-Công-Thái-Học-Công-Nghệ-Japan-i.1090783225.24251489307
 
 [demxanh.com]
-match = 6.2%%
-title = Đệm bông ép Dreamland chống thoái hóa cột sống
-url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
+match = -40.6%%
+title = Đệm cao su Dunlopillo Latex World Pure giá rẻ nhất Hà Nội
+url = https://demxanh.com/dem-cao-su-dunlopillo-latex-world-pure.html
 
 [www.youtube.com]
 match = -43.8%%
@@ -40,4 +40,14 @@ url = https://www.amazon.com/Dreamfoam-Bedding-Slumber-Essentials-Mattress/produ
 match = -37.5%%
 title = Pulled the trigger today and purchased the Dreamfoam ...
 url = https://forum.mattressunderground.com/t/pulled-the-trigger-today-and-purchased-the-dreamfoam-ultimate-dreams-13inch-gel-memory-foam/6902
+
+[www.emag.hu]
+match = -53.1%%
+title = Previ Organikus Pamut Matrac, Comfort Aquagel Air-Fresh ...
+url = https://www.emag.hu/previ-organikus-pamut-matrac-comfort-aquagel-air-fresh-14-8-memoriareteg-ortopediai-anatomiai-antiallergen-antibakterialis-szelloztetes-2d-free-air-160-x-200-cm-6426390159373/pd/DQ5BD3MBM/
+
+[thegioidemonline.com]
+match = -9.4%%
+title = Xả kho thanh lý chăn ga gối đệm tháng 8.2022
+url = https://thegioidemonline.com/xa-kho-thanh-ly-chan-ga-goi-dem-thang-82022.html
 
