CI images update

--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-26 17:57:17
+lastsearch = 2024-07-26 21:46:23
 
 [www.diepxuan.com]
 match = 27.3%%
@@ -37,9 +37,9 @@ title = Thảm Sofa Biên Hòa
 url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [www.thamvintage.vn]
-match = 12.5%%
-title = Thảm chân giường
-url = https://www.thamvintage.vn/collections/tham-chan-giuong
+match = -25.0%%
+title = Thảm Vintage
+url = https://www.thamvintage.vn/
 
 [cafeland.vn]
 match = -72.7%%
