--- a/images/nem-diamold-re-200x220x09/config.ini
+++ b/images/nem-diamold-re-200x220x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-diamold-re-200x220x09.html
 lastopen = 2024-06-10 11:11:36
 
 [search]
-lastsearch = 2024-07-26 17:39:40
+lastsearch = 2024-07-26 21:49:09
 
 [www.youtube.com]
 match = -104.0%%
@@ -87,9 +87,9 @@ title = TheBackShed.com - Forum
 url = https://thebackshed.org/forum/ViewTopic_mobile.php?TID=8542&P=7
 
 [www.reddit.com]
-match = -12.0%%
-title = Tested Diamond but I bought Moissanite
-url = https://www.reddit.com/r/Moissanite/comments/1de2d9y/tested_diamond_but_i_bought_moissanite/
+match = -96.0%%
+title = Hello I am currently looking to buy a new Diamond and ...
+url = https://www.reddit.com/r/Benchjewelers/comments/p2qhy5/hello_i_am_currently_looking_to_buy_a_new_diamond/
 
 [www.tapeheads.net]
 match = -12.0%%
