CI images update

--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-26 20:37:25
+lastsearch = 2024-07-26 22:20:15
 
 [burningman.org]
 match = -60.0%%
@@ -800,4 +800,9 @@ url = https://www.kare11.com/
 match = -266.7%%
 title = Knoxville Breaking News, Weather, Traffic, Sports | WBIR.com ...
 url = https://www.wbir.com/
+
+[www.neverendingfootsteps.com]
+match = -166.7%%
+title = The Ultimate Guide to the Trang Islands of Thailand
+url = https://www.neverendingfootsteps.com/trang-island-guide-thailand/
 
