--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-26 21:36:15
+lastsearch = 2024-07-26 22:18:31
 
 [www.diepxuan.com]
 match = -13.3%%
@@ -17,9 +17,9 @@ title = Đèn chiếu cỏ CD-15W - HTLIGHT
 url = https://www.htlight.vn/den-chieu-co-cd-15w-1.html
 
 [shopee.vn]
-match = -106.7%%
-title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
-url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
+match = -6.7%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [daros.com.vn]
 match = -40.0%%
@@ -205,4 +205,9 @@ url = https://kap21.fr/47241128-fixed-odds-today-fairgram.html
 match = -166.7%%
 title = NHAN NHANH CHOI vA TAO CAY HOAN CHINH DONG KEO ...
 url = https://sti.vista.gov.vn/tw/Lists/TaiLieuKHCN/Attachments/276225/CVv421S32019003.pdf
+
+[thaibinhseed.com.vn]
+match = 6.7%%
+title = Giống lúa thuần BC15
+url = https://thaibinhseed.com.vn/vi-vn/san-pham/giong-lua/giong-lua-thuan-bc15.aspx
 
