--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-26 20:47:26
+lastsearch = 2024-07-26 22:22:41
 
 [helloviettravel.com]
 match = -181.2%%
@@ -19,7 +19,7 @@ url = http://saovangtravel.com/du-lich-x/du-lich-xuyen-viet-19-ngay-18-dem/
 [hanhhuonghoasen.com.vn]
 match = -50.0%%
 title = DU LỊCH XUYÊN VIỆT 18N17D GIÁ RẺ
-url = https://hanhhuonghoasen.com.vn/du-lich-xuyen-viet?srsltid=AfmBOoob3B2KkO2b45EfrjLzDMGMTx0zOU7PaSWS9VbCc-ZXo3xJGnin
+url = https://hanhhuonghoasen.com.vn/du-lich-xuyen-viet
 
 [vtv.vn]
 match = -181.2%%
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = -143.8%%
-title = KINH DỊ 18 TẦNG ĐỊA NGỤC KHU DU LỊCH SUỐI TIÊN 2024
-url = https://www.youtube.com/watch?v=Z5uq2IjfDD8
+match = 12.5%%
+title = Bản tin Du lịch 18/7/2024
+url = https://www.youtube.com/watch?v=JPdEyoI0u4Y
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
