--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-26 18:24:26
+lastsearch = 2024-07-26 22:14:20
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -12,9 +12,9 @@ title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
 url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
-match = 29.0%%
-title = Chiếu trúc Quế Lâm không viền màu trắng 160x200cm
-url = https://chieutrelanlan.com/chieu-truc-que-lam-khong-vien-mau-trang-160x200cm-72.html
+match = 32.3%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html?size=16
 
 [shopee.vn]
 match = 16.1%%
@@ -22,9 +22,9 @@ title = chiếu trúc giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=chiếu trúc
 
 [tiki.vn]
-match = -6.5%%
-title = Chiếu trúc hàng chính hãng, giao nhanh - Tháng 7, 2024
-url = https://tiki.vn/search?q=chiếu trúc
+match = -19.4%%
+title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 7, 2024
+url = https://tiki.vn/search?q=chiếu trúc hạt
 
 [demxanh.com]
 match = -9.7%%
