--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-26 18:55:24
+lastsearch = 2024-07-26 22:24:39
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Luật Di trú và Cuộc sống Mỹ | BỊ THU HỒI THẺ XANH KHI ..
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -250.0%%
-title = Low-budget GREEN SCREEN at home | What gives the best ...
-url = https://www.youtube.com/watch?v=axwpepx1FTw
+match = -285.7%%
+title = Cập nhật giá TIVI dưới 10 triệu trong tháng 7 tại Điện máy XANH
+url = https://www.youtube.com/watch?v=j_AHP98h1wM
 
 [www.reddit.com]
 match = -64.3%%
@@ -82,9 +82,9 @@ title = 10 Evidence-Based Benefits of Green Tea
 url = https://www.healthline.com/nutrition/top-10-evidence-based-health-benefits-of-green-tea
 
 [en.wikipedia.org]
-match = -20.0%%
-title = Green card
-url = https://en.wikipedia.org/wiki/Green_card
+match = 7.1%%
+title = Little green men
+url = https://en.wikipedia.org/wiki/Little_green_men
 
 [www.imdb.com]
 match = 7.1%%
