--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-26 20:29:48
+lastsearch = 2024-07-26 22:20:57
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Ruột Korea - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/ruot-korea.html
 
 [www.reddit.com]
-match = -82.6%%
-title = Kog'Maw means sweet potato in Korean (고구마). Any ...
-url = https://www.reddit.com/r/leagueoflegends/comments/5qvb2u/kogmaw_means_sweet_potato_in_korean_고구마_any_other/
+match = -87.0%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [www.southpasadenaca.gov]
 match = -69.6%%
@@ -122,9 +122,9 @@ title = EBB and Flow, November 1950-July 1951 - DTIC
 url = https://apps.dtic.mil/sti/tr/pdf/ADA232745.pdf
 
 [www.tiktok.com]
-match = -104.3%%
-title = @Jacquemus has just opened their pop up store in Seoul ...
-url = https://www.tiktok.com/@culted/video/7292084447212571937?lang=en
+match = -117.4%%
+title = Its 🍓strawberry season! Ft strawberry sago #sago #dessert ...
+url = https://www.tiktok.com/@pete_eats/video/7242653470434807086
 
 [30rates.com]
 match = -39.1%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -82.6%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -87.0%%
+title = PM calls off press meeting amid clash over THAAD ...
+url = https://en.yna.co.kr/view/AEN20170907001800315
 
 [www.usmcu.edu]
 match = -104.3%%
@@ -437,9 +437,9 @@ title = atp 5-0.2 staff reference guide staffing draft—not for implem ...
 url = https://usacac.army.mil/sites/default/files/documents/cadd/Collaboration/11-08-19_SRG_CGSC2.pdf
 
 [www.biblegateway.com]
-match = -56.5%%
-title = Atos 19,Acts 19 NVI-PT;NIV - Paulo em Éfeso
-url = https://www.biblegateway.com/passage/?search=Atos 19,Acts 19&version=NVI-PT;NIV
+match = -108.7%%
+title = Marc 14 BDS;KAR;KJV;NIV - Mort et résurrection de Jésus Le
+url = https://www.biblegateway.com/passage/?search=Marc 14&version=BDS;KAR;KJV;NIV
 
 [kids.nationalgeographic.com]
 match = 0.0%%
