--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-26 18:27:19
+lastsearch = 2024-07-26 22:39:56
 
 [changagoidemsonghong.com]
-match = 18.5%%
-title = chăn ga gối cotton cao cấp Archives
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-cao-cap
+match = -55.6%%
+title = HOme Collection - dòng chăn ga gối cotton nhập khẩu hiệu ...
+url = https://changagoidemsonghong.com/home-collection
 
 [demhong.vn]
 match = 11.1%%
@@ -72,9 +72,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16
 url = https://bedding.vn/chan-ga-goi-song-hong-uc16/
 
 [shopee.vn]
-match = -40.7%%
-title = bộ chăn ga gối cotton poly giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ chăn ga gối cotton poly
+match = -25.9%%
+title = chăn ga cotton giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chăn ga cotton
 
 [lynconcept.com]
 match = -25.9%%
