--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-26 18:00:44
+lastsearch = 2024-07-26 22:43:06
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -209,7 +209,7 @@ url = https://vaas.vn/vi/giong/giong-lac-l14
 [www.vinaseed.com.vn]
 match = -56.2%%
 title = Hướng dẫn gieo trồng giống lạc L14
-url = https://www.vinaseed.com.vn/vi/news/m35/huong-dan-gieo-trong-giong-lac-l14-150.htm
+url = https://www.vinaseed.com.vn/vi/news/m25/huong-dan-gieo-trong-giong-lac-l14-150.htm
 
 [www.chieuduong.vn]
 match = -87.5%%
@@ -222,9 +222,9 @@ title = Chào Mừng Quý Vị Đến Hoa Kỳ
 url = https://www.uscis.gov/sites/default/files/document/guides/M-618_v.pdf
 
 [shopee.vn]
-match = -156.2%%
-title = Cách tăng chiều cao tuổi 14 hiệu quả không nên bỏ qua
-url = https://shopee.vn/blog/tang-chieu-cao-tuoi-14/
+match = 25.0%%
+title = Chiếu Lác Trắng Xếp Gọn
+url = https://shopee.vn/Chiếu-Lác-Trắng-Xếp-Gọn-i.58697470.8505363108
 
 [momo.vn]
 match = -56.2%%
