--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-26 21:13:57
+lastsearch = 2024-07-26 22:39:32
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -299,7 +299,7 @@ url = https://www.floridabar.org/the-florida-bar-journal/the-reinstatement-of-co
 [books.google.com]
 match = -152.9%%
 title = The Monthly Army List - Page 5 - Google Books Result
-url = https://books.google.com/books?id=DrsrAQAAIAAJ&pg=RA1-PA5&lpg=RA1-PA5&dq=man+in+hoa+dep+14&source=bl&ots=2Cer6kriYp&sig=ACfU3U3s0lerk4l0n3HQZlfK5BZa9fyLgQ&hl=en&sa=X&ved=2ahUKEwiLof6Kw8SHAxXRLEQIHWiKJWUQ6AF6BAhEEAM
+url = https://books.google.com/books?id=DrsrAQAAIAAJ&pg=RA1-PA5&lpg=RA1-PA5&dq=man+in+hoa+dep+14&source=bl&ots=2CesZbzf_m&sig=ACfU3U2B7LQcAeQVaYJUl4ZQEDlJn3yv7Q&hl=en&sa=X&ved=2ahUKEwiOkfGKhcWHAxXQEVkFHSLLC6UQ6AF6BAgbEAM
 
 [www.house.gov]
 match = 11.8%%
