--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-26 17:24:21
+lastsearch = 2024-07-26 22:38:31
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -37,9 +37,9 @@ title = US strategic bombers conduct drills with Japan and South ...
 url = https://www.vietnam.vn/en/may-bay-nem-bom-chien-luoc-my-tap-tran-voi-nhat-han-o-ban-dao-trieu-tien/
 
 [www.youtube.com]
-match = -150.0%%
-title = Our Game (ft. Kim Jung Gi) | Anniversary 2019 Mural Time ...
-url = https://www.youtube.com/watch?v=3owI8KRRwaI
+match = 0.0%%
+title = 
+url = https://www.youtube.com/watch?v=azfAgPKgIYs
 
 [som.yale.edu]
 match = -110.0%%
