--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-07-26 22:29:55
+lastsearch = 2024-07-26 22:46:47
 
 [demxanh.com]
 match = 6.9%%
 title = Chiếu điều hòa cao su non đa sắc xanh cốm hình hoa
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xanh-com-hinh-hoa.html?srsltid=AfmBOoriQnU8mZzUqGLCNTOQMwdvCuu9ehzAY5hNU-PN_Vh_PS0ttuOb
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xanh-com-hinh-hoa.html
 
 [tiki.vn]
 match = 20.7%%
@@ -24,7 +24,7 @@ url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 [www.lazada.vn]
 match = 13.8%%
 title = CHIẾU ĐIỀU HOÀ CHIẾU CAO SU NON 3D HOẠ TIẾT ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-chieu-cao-su-non-3d-hoa-tiet-tang-kem-2-vo-goi-i1328333458.html?srsltid=AfmBOoqluI3Zaw3hUaiDi58sf8zJyivSWJQgoEmkO4zwtVf_l-D555nC
+url = https://www.lazada.vn/products/chieu-dieu-hoa-chieu-cao-su-non-3d-hoa-tiet-tang-kem-2-vo-goi-i1328333458.html
 
 [nanara.vn]
 match = 34.5%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
 url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [chiaki.vn]
-match = 6.9%%
-title = Chiếu điều hòa Tencel latex cao su non 3D kèm gối
-url = https://chiaki.vn/chieu-dieu-hoa-tencel-latex-cao-su-non-3d-kem-goi
+match = 13.8%%
+title = Chiếu điều hòa cao su non Tencel Latex 2D mẫu 2022
+url = https://chiaki.vn/chieu-dieu-hoa-cao-su-non-tencel-latex-2d-mau-2022
 
 [shopee.vn]
 match = -20.7%%
