--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-26 16:44:44
+lastsearch = 2024-07-26 22:45:41
 
 [www.tiktok.com]
 match = -35.3%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -123.5%%
-title = The army list - Page 463 - Google Books Result
-url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC68stONSH&sig=ACfU3U03Wp-8QS5ObQxMuFdDV9x3dDC4Mg&hl=en&sa=X&ved=2ahUKEwjD4PzjtcSHAxU1k4kEHfowANQQ6AF6BAgZEAM
+match = -158.8%%
+title = The Monthly Army List - Page 23 - Google Books Result
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdnfcc4hS&sig=ACfU3U0C9E_uYJmUiTAJs8skfwKkZw80BQ&hl=en&sa=X&ved=2ahUKEwjaxvK6hsWHAxU9EVkFHemGCzMQ6AF6BAgWEAM
 
 [tax.vermont.gov]
 match = -29.4%%
@@ -565,4 +565,9 @@ url = https://www.greenvilleonline.com/story/news/local/south-carolina/2019/03/1
 match = 0.0%%
 title = 
 url = https://www.doi.gov/protectnch/about-NCH/partners/fs
+
+[www.peopleclerk.com]
+match = 0.0%%
+title = 
+url = https://www.peopleclerk.com/post/hoa-violation-letter
 
