--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-26 20:22:49
+lastsearch = 2024-07-26 22:47:08
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -17,13 +17,13 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -86.4%%
-title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
+match = -36.4%%
+title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 - Lazada
 url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
 
 [flexhouse.vn]
-match = -104.5%%
-title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
+match = -50.0%%
+title = Thảm tròn trải chân giường trong phòng ngủ ...
 url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
 
 [ochino.com]
@@ -42,9 +42,9 @@ title = thảm trải sàn giá tốt Tháng 6, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải sàn
 
 [blanc.vn]
-match = -9.1%%
-title = Thảm trải sàn Osa lông thú nhân tạo
-url = https://blanc.vn/tham-kobe
+match = -104.5%%
+title = Thảm trải sàn BLANC' | Thảm lông, thảm dệt 3D đổi trả ...
+url = https://blanc.vn/tham-trai-san
 
 [demxanh.com]
 match = -27.3%%
@@ -82,8 +82,8 @@ title = Căn hộ cho thuê tại Bras-Panon, Saint-Benoît, Réunion - Airbnb
 url = https://www.airbnb.com.vn/rooms/1104230023148123684
 
 [comehome.com.vn]
-match = -40.9%%
-title = TOP mẫu giường tầng cho bé trai, bé gái ...
+match = -113.6%%
+title = TOP mẫu giường tầng cho bé trai, bé gái, giường tầng trẻ ...
 url = https://comehome.com.vn/blog/post/mau-giuong-tang-cho-be
 
 [anawood.vn]
