CI images update

--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-26 20:45:30
+lastsearch = 2024-07-26 23:36:46
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -465,4 +465,9 @@ url = https://www.asdnews.com/news/aerospace/2024/07/24/airbus-tata-advanced-sys
 match = -22.2%%
 title = John Cruz
 url = https://www.pbshawaii.org/wp-content/uploads/2024/07/PBSHI-PG_AUG24-Web_05.pdf
+
+[sr.linkedin.com]
+match = -200.0%%
+title = TUI
+url = https://sr.linkedin.com/company/tuigroup?trk=products_details_guest_organization_name
 
