--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-26 20:31:54
+lastsearch = 2024-07-26 23:45:19
 
 [hk.linkedin.com]
 match = -123.1%%
-title = Chan Hoi Ching Ella - HKU Business School
-url = https://hk.linkedin.com/in/chan-hoi-ching-ella
+title = Chan cocoo - Freelance (Self employed)
+url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
-match = -115.4%%
-title = Coco Chan (@cocopops072) - Instagram
-url = https://www.instagram.com/cocopops072/?hl=en
+match = -230.8%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.solunafineart.com]
 match = -22.2%%
@@ -27,8 +27,8 @@ title = Coco Lee
 url = https://en.wikipedia.org/wiki/Coco_Lee
 
 [www.sassymamahk.com]
-match = -200.0%%
-title = That Mama: Coco Chan, Founder Of Voltage PR ...
+match = -246.2%%
+title = That Mama: Coco Chan, Founder Of Voltage PR And Co- ...
 url = https://www.sassymamahk.com/coco-chan-voltage-pr-omsa-family-life/
 
 [www.tiktok.com]
@@ -42,8 +42,8 @@ title = I Am an HKUer - Hong Kong
 url = https://admissions.hku.hk/hkuer
 
 [www.alamy.com]
-match = -200.0%%
-title = Hong Kong-born Canadian actress Grace Chan ...
+match = -246.2%%
+title = Hong Kong-born Canadian actress Grace Chan Hoi Lam ...
 url = https://www.alamy.com/hong-kong-born-canadian-actress-grace-chan-hoi-lam-attends-a-v-city-event-in-hong-kong-china-24-december-2018-image261767432.html
 
 [www.tripadvisor.com]
@@ -52,9 +52,9 @@ title = Coco Viet Homestay - Hoi An Hotels - Tripadvisor
 url = https://www.tripadvisor.com/Hotel_Review-g298082-d19797871-Reviews-Coco_Viet_Homestay-Hoi_An_Quang_Nam_Province.html
 
 [jovelchan.com]
-match = -238.5%%
-title = How The Cocoa Project is changing the narrative ...
-url = https://jovelchan.com/blog/the-cocoa-project-changing-narrative-chocolate-vietnam
+match = -153.8%%
+title = 5 Made-in-Vietnam Artisan Chocolate Brands
+url = https://jovelchan.com/blog/five-made-in-vietnam-artisan-chocolate-brands
 
 [sourcing.hktdc.com]
 match = -115.4%%
