--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-26 18:27:40
+lastsearch = 2024-07-26 23:42:27
 
 [shopee.vn]
-match = -45.8%%
-title = chiếu điều hòa kèm gối giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
+match = -41.7%%
+title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -19,7 +19,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 [demxanh.com]
 match = -25.0%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOooJpIRgWgv1N-fnuiAb9EOtrqPKg0MbLjp4_FqohJKLkNXJBEQ6
 
 [goni.vn]
 match = 4.2%%
@@ -29,7 +29,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demluxury.com.vn]
 match = -8.3%%
 title = Chiếu mát, chiếu điều hòa cao cấp Luxury Home
-url = https://demluxury.com.vn/san-pham/chieu-mat-chieu-dieu-hoa-cao-cap-luxury-home/
+url = https://demluxury.com.vn/san-pham/chieu-mat-chieu-dieu-hoa-cao-cap-luxury-home/?srsltid=AfmBOopDnSftfto5_X3T3EkWPGdBg-IJdJzI6OWIRLO21AFgdbYMDpwH
 
 [kyoryo.vn]
 match = -58.3%%
@@ -39,7 +39,7 @@ url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truon
 [sieuthidem.vn]
 match = 16.7%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOorrq4RedD9jgwCX27jCtRwyao5V1ccfQ593QHZX8TC4n7Mz_VtN
 
 [cungnhaulamgiau.vn]
 match = 4.2%%
@@ -69,7 +69,7 @@ url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 [foreverbedding.net]
 match = -20.8%%
 title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOor5l_5CcVWqfGxsXxgBV3hLM35ZJ5V8YMkI39G93l54Wo9qMv-c
 
 [joliefam.vn]
 match = -37.5%%
