CI images update

--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-26 21:42:31
+lastsearch = 2024-07-27 00:04:14
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -52,8 +52,8 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -223.1%%
-title = Ayu Gani 🐘 (@ganegani) • Instagram photos and videos
+match = -15.4%%
+title = Ayu Gani 🐘 (@ganegani)
 url = https://www.instagram.com/ganegani/?hl=en
 
 [www.nebf.com]
