--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-26 20:34:19
+lastsearch = 2024-07-26 23:54:12
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = 10.5%%
-title = Frederick Hecht, MD
-url = https://profiles.ucsf.edu/frederick.hecht
+match = 10.0%%
+title = Joan Hilton, DSc, MPH
+url = https://profiles.ucsf.edu/joan.hilton
 
 [cityofclovis.com]
 match = -65.0%%
@@ -172,9 +172,9 @@ title = EPA's Reanalysis of Key Issues Related to Dioxin Toxicity and ...
 url = https://cfpub.epa.gov/ncea/iris/iris_documents/documents/supdocs/dioxinv1sup.pdf
 
 [cps-vo.org]
-match = -140.0%%
-title = Registrants | Cyber-Physical Systems Virtual Organization
-url = https://cps-vo.org/group/satc-pimtg22/registrants
+match = -130.0%%
+title = Attendees | Cyber-Physical Systems Virtual Organization
+url = https://cps-vo.org/group/satc-pimtg22/attendees
 
 [backend.daikincomfort.com]
 match = -28.6%%
