--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-26 22:31:14
+lastsearch = 2024-07-26 23:53:27
 
 [everon.online]
 match = -32.0%%
@@ -19,7 +19,7 @@ url = https://everonchinhhang.vn/products/bo-chan-bon-mua-chan-troi-xanh-esm2401
 [everonvn.com.vn]
 match = 28.0%%
 title = Báo giá chăn 4 mùa Everon
-url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon?srsltid=AfmBOooflXf4AgztRkiDAEWG5pRawkaQfQ6fww0ePHN4Xg96Q9XHglsP
+url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon
 
 [www.changagoidemeveron.vn]
 match = -8.0%%
@@ -52,9 +52,9 @@ title = Bán căn hộ chung cư tại Đường 129, , Huyện Thăng Bình ...
 url = https://batdongsan.com.vn/ban-can-ho-chung-cu-duong-129-516/dt-tu-50m2-den-80m2-1pn
 
 [www.youtube.com]
-match = -32.0%%
-title = [KARAOKE] MÁI TRƯỜNG EM YÊU (BEAT CHUẨN) LỚP 1
-url = https://www.youtube.com/watch?v=S0r0IbH8LCs
+match = -84.0%%
+title = Gia Đình Nhỏ, Hạnh Phúc To - Nhạc Thiếu Nhi Vui Nhộn Hay ...
+url = https://www.youtube.com/watch?v=VQBkLYbLE5g
 
 [bdshanoi.com.vn]
 match = -4.0%%
@@ -74,7 +74,7 @@ url = https://www.canhociputra.com/ban-can-ho-chung-cu-ciputra/ban-gap-can-ho-4-
 [www.everonvni.vn]
 match = 24.0%%
 title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
-url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/?srsltid=AfmBOooaSHFfZ7EcapRUevK1bBwuMRmYJAvN6d-gaL1a7SfWdpydQ_J0
+url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
 
 [format.com.vn]
 match = -100.0%%
