--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-26 20:45:03
+lastsearch = 2024-07-26 23:57:29
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu điều hòa cao su non - Giá Tốt, Miễn Phí Vận Chuyển ...
-url = https://shopee.vn/list/chiếu điều hòa/cao su non
+match = 35.3%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [olbedding.com]
 match = 11.8%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = 14.7%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 38.2%%
+title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
 
 [giadunganhvan.vn]
 match = 48.0%%
