--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-26 21:11:51
+lastsearch = 2024-07-26 23:48:01
 
 [tiki.vn]
 match = 16.0%%
@@ -54,7 +54,7 @@ url = https://www.skyscanner.com.vn/routes/tpe/han/taipei-taiwan-taoyuan-to-ha-n
 [www.bestprice.vn]
 match = -80.0%%
 title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất hôm nay
-url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
+url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan?srsltid=AfmBOoofvPh_vB06OGB4ItT1wbBnIs8QkkchcuT1_IdmmtXimdC8sYXE
 
 [www.traveloka.com]
 match = -96.0%%
