--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-07-26 19:56:25
+lastsearch = 2024-07-27 00:04:57
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -12,9 +12,9 @@ title = Cửa hàng chiếu nhựa, mành, rèm, thảm uy tin tại Hà Nội
 url = https://www.maihuyencorp.com/shop
 
 [shopee.vn]
-match = -85.0%%
-title = Chiếu Nhựa Mai Huyền Hà Nội 1,5m , 1,6m , 1m8,1m8x3m ...
-url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-Hà-Nội-1-5m-1-6m-1m8-1m8x3m-1m8x4m-i.81313558.12532512757
+match = -70.0%%
+title = Chiếu nhựa - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/nhựa
 
 [tchome.vn]
 match = 20.0%%
@@ -48,13 +48,13 @@ url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 15.0%%
-title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
+title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 
 [www.lazada.vn]
 match = 10.0%%
 title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1m8x4m)
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html?srsltid=AfmBOorzppu6pDLB3GjO0t2bfu0QuwJ7tE_-V4E4Pf3Sd_wFd-L3IGk7
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html
 
 [thuanloitrading.com]
 match = 10.0%%
