--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-07-26 17:23:39
+lastsearch = 2024-07-27 00:04:36
 
 [www.everonvn.vn]
-match = 69.2%%
-title = Đệm lò xo Everon Pocket Premium
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-pocket-premium.html
+match = 80.8%%
+title = Đệm lò xo Everon Pocket Pops
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Pocket-Pops.html
 
 [www.diepxuan.com]
 match = 61.5%%
