CI images update

--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-07-26 22:41:40
+lastsearch = 2024-07-27 00:39:40
 
 [us.misumi-ec.com]
 match = -325.0%%
@@ -117,9 +117,9 @@ title = Phyu P Aung
 url = https://faculty.mdanderson.org/profiles/phyu_aung.html
 
 [uncwsports.com]
-match = -175.0%%
-title = 21 Jenny DeGraaf - Women's Basketball
-url = https://uncwsports.com/sports/womens-basketball/roster/jenny-degraaf/5690
+match = -275.0%%
+title = Adam Fearing - Executive Director - Staff Directory
+url = https://uncwsports.com/staff-directory/adam-fearing/27
 
 [dvhs.srvusd.net]
 match = -141.7%%
@@ -305,4 +305,19 @@ url = https://www.ktalnews.com/news/u-s-world/ap-a-court-ruling-will-allow-new-s
 match = 0.0%%
 title = 
 url = https://www.uncfsu.edu/about-fsu
+
+[profiles.ucsf.edu]
+match = -33.3%%
+title = Michael McManus, PhD
+url = https://profiles.ucsf.edu/michael.mcmanus
+
+[www.octa.net]
+match = -100.0%%
+title = Complete Bus Book - May 2024
+url = https://www.octa.net/ebusbook/CompleteBusBook.pdf?n=202405
+
+[vivo.brown.edu]
+match = -158.3%%
+title = Yuri Bazilevs - Researchers @ Brown
+url = https://vivo.brown.edu/display/ybazilev
 
