--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-26 21:01:03
+lastsearch = 2024-07-27 00:31:58
 
 [www.tui.co.uk]
 match = -250.0%%
@@ -112,9 +112,9 @@ title = All Bags | DeMellier | Shop now
 url = https://demellierlondon.com/collections/all-bags
 
 [www.telegraph.co.uk]
-match = -308.3%%
-title = North Korean hackers stole military secrets, FBI reveals
-url = https://www.telegraph.co.uk/world-news/2024/07/25/north-korean-hackers-stole-military-secrets-fbi-reveals/
+match = -200.0%%
+title = The 20 best TV travel shows ever – ranked
+url = https://www.telegraph.co.uk/tv/0/best-tv-travel-shows-all-time-ranked/
 
 [www.oneworld.com]
 match = -283.3%%
