--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-26 18:58:56
+lastsearch = 2024-07-27 00:35:27
 
 [everon.online]
 match = -7.4%%
@@ -28,8 +28,8 @@ url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
 match = 18.5%%
-title = Bộ chăn ga gối Everon EPC-21053
-url = https://everonhanquoc.vn/everon/12776/bo-chan-ga-goi-everon-epc-21053
+title = Bộ Chăn ga gối Everon EPM-21067
+url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
 
 [everonhn.com.vn]
 match = 33.3%%
@@ -42,9 +42,9 @@ title = Bộ Everon Epm-21069 - Chăn ga gối đệm Everon
 url = https://everon.net.vn/everon/2132/bo-everon-epm-21069
 
 [sieuthidemhanquoc.com.vn]
-match = 22.2%%
-title = Bộ chăn ga gối Everon EPM-21070
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21070-1529
+match = 18.5%%
+title = Bộ chăn ga gối Everon EPM-21071
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21071-1533
 
 [shopee.vn]
 match = -44.4%%
