--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-07-26 23:47:17
+lastsearch = 2024-07-27 00:34:02
 
 [chieutruc.info]
 match = -73.9%%
@@ -12,14 +12,14 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
-match = 30.4%%
-title = Chiếu Trúc Cao Bằng Tây Bắc giá rẻ
-url = https://demxanh.com/chieu-truc-cao-bang-tay-bac.html
+match = -60.9%%
+title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
+url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
 
 [chieutrucsaigon.com]
-match = 43.5%%
-title = CHIẾU TRÚC THANH CAO BẰNG 1M8X2M
-url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m8x2m.html
+match = -26.1%%
+title = ĐỊA CHỈ MUA CHIẾU TRÚC TIN CẬY TĨNH LONG AN
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/dia-chi-mua-chieu-truc-tin-cay-tinh-long-an-55.html
 
 [shopee.vn]
 match = -43.5%%
@@ -57,9 +57,9 @@ title = Chiếu trúc Cao Bằng Cao Sơn chất lượng cao - Lombomshop!
 url = https://lombom.com/chieu-truc-cao-bang-cao-son/
 
 [khodem.vn]
-match = -56.5%%
-title = Chiếu trúc cây Cao Bằng Chiếu Việt Nam tốt nhất - Kho đệm
-url = https://khodem.vn/chieu-truc-cay-cao-bang/
+match = -39.1%%
+title = MUA CHIẾU TRÚC CAO BẰNG Ở ĐÂU TẠI HÀ NỘI - Kho đệm
+url = https://khodem.vn/mua-chieu-truc-cao-bang-o-dau-tai-ha-noi/
 
 [thegioichieutruc.com]
 match = 0.0%%
@@ -85,4 +85,19 @@ url = https://baocaobang.vn/-23720.html
 match = -13.0%%
 title = Độc đáo các sản phẩm từ trúc Cao Bằng
 url = https://caobang.gov.vn/viet-nam-dat-nuoc-con-nguoi/doc-dao-cac-san-pham-tu-truc-cao-bang-778155
+
+[chieutruccaobang.com]
+match = -69.6%%
+title = Chiếu Trúc Cao Bằng - Cung cấp chiếu trúc Cao Sơn giá tốt
+url = https://chieutruccaobang.com/
+
+[www.vietnamplus.vn]
+match = -69.6%%
+title = Cây trúc sào và chiếu trúc sào Cao Bằng được bảo hộ chỉ ...
+url = https://www.vietnamplus.vn/cay-truc-sao-va-chieu-truc-sao-cao-bang-duoc-bao-ho-chi-dan-dia-ly-post569796.vnp
+
+[startup.caobang.gov.vn]
+match = -108.7%%
+title = Hội đồng tư vấn tuyển chọn tổ chức chủ trì nhiệm vụ “Quản ...
+url = https://startup.caobang.gov.vn/hoi-dong-tu-van-tuyen-chon-to-chuc-chu-tri-nhiem-vu----quan-ly--khai-thac-va-phat-trien-chi-dan-dia-ly-cho-san-pham-cay-truc-sao-va-chieu-truc-sao-cua-tinh-cao-bang----n951.html
 
