--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -14,7 +14,7 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 [demxanh.com]
 match = -28.0%%
 title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html?srsltid=AfmBOorPlVwIli7sl2V43k7JsBjbnp-g5xH2hUjwjs4de-dYvK0xt8uU
 
 [shopee.vn]
 match = -64.0%%
