--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-27 00:36:12
+lastsearch = 2024-07-27 01:16:30
 
 [scholar.google.com]
 match = -43.8%%
@@ -119,7 +119,7 @@ url = https://www.youtube.com/watch?v=mscki_o4aGM
 [books.google.com]
 match = -87.5%%
 title = NCĐT số 774: Lạc Lối Trong Mạng Xã Hội
-url = https://books.google.com/books?id=TQpuEAAAQBAJ&pg=PA6&lpg=PA6&dq=chieu+lac+soc+18&source=bl&ots=HENP0_Z7VE&sig=ACfU3U2d0edGvRrJ1URv5AuUUxX7qIcjmg&hl=en&sa=X&ved=2ahUKEwi13v7mw8SHAxW-D1kFHbWyAXIQ6AF6BAggEAM
+url = https://books.google.com/books?id=TQpuEAAAQBAJ&pg=PA6&lpg=PA6&dq=chieu+lac+soc+18&source=bl&ots=HENQTS46_w&sig=ACfU3U2x4tCByi3ZfmGXIQJnHlut27ghLA&hl=en&sa=X&ved=2ahUKEwjt696VqMWHAxXvEkQIHfkLJdsQ6AF6BAglEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
