--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-26 22:52:30
+lastsearch = 2024-07-27 01:26:01
 
 [shopee.vn]
 match = -36.8%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -178.9%%
-title = Nastya chơi các hoạt động vui chơi ngoài trời và trò chơi gia ...
-url = https://www.youtube.com/watch?v=dL6dDSetoLA
+match = -110.5%%
+title = Nhạc thiếu nhi vui nhộn cho bé: Tập thể dục buổi sáng
+url = https://www.youtube.com/watch?v=VcXWebskM88
 
 [dochoihoangthu.com]
 match = -121.1%%
