--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-26 17:41:05
+lastsearch = 2024-07-27 01:27:07
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -22,9 +22,9 @@ title = Danh Sách Các Sân Cầu Lông Ở Bình Thạnh Mới Nhất
 url = https://shopvnb.com/danh-sach-cac-san-cau-long-o-binh-thanh-moi-nhat.html
 
 [m.facebook.com]
-match = -213.3%%
-title = Thích Ăn Uống Rạch Giá | Cá mú về đủ size rồi nha 1, ...
-url = https://m.facebook.com/groups/thichanuongrg/posts/3821970811457312/
+match = 6.7%%
+title = ForG Architects
+url = https://m.facebook.com/ForGArchitects/
 
 [thaivietgroup.com]
 match = -20.0%%
@@ -272,9 +272,9 @@ title = [VIDEO] The Dial of Destiny: Astrology of July & August as well ...
 url = https://www.lainielovedalby.com/reverent-reflections-blog/2023/7/17/video-the-dial-of-destiny-astrology-of-july-amp-august-as-well-as-a-big-announcement
 
 [jhouse.vn]
-match = -173.3%%
-title = JHouse.vn: Housing For Expats In Ho Chi Minh City
-url = https://jhouse.vn/en/
+match = -213.3%%
+title = Rooftop 1-BR Apartment With Terrace On Nguyen Dinh ...
+url = https://jhouse.vn/en/property/rooftop-1-br-apartment-with-terrace-on-nguyen-dinh-chieu-street/
 
 [www.vietnam-sketch.com]
 match = -426.7%%
@@ -365,4 +365,14 @@ url = https://dochoimamnon123.com/dung-cu-lac-lung-eo
 match = 0.0%%
 title = Tìm đường xe buýt
 url = http://timbus.vn/
+
+[lpbank.com.vn]
+match = -73.3%%
+title = danh sách pos lienvietpostbank
+url = https://lpbank.com.vn/wp-content/uploads/2019/08/Danh_sach_POS_LienVietPostBank_08_2019.pdf
+
+[atpsoftware.vn]
+match = -233.3%%
+title = Danh sách các kho Shopee Express phổ biến nhất tại TP. ...
+url = https://atpsoftware.vn/danh-sach-kho-shopee-express.html
 
