--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-07-27 00:33:19
+lastsearch = 2024-07-27 01:25:00
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -19,7 +19,7 @@ url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-16
 [nemsaithanh.com]
 match = -10.0%%
 title = Chiếu Trúc
-url = https://nemsaithanh.com/chieu-truc-103.html
+url = https://nemsaithanh.com/san-pham/chieu-truc-135.html
 
 [trangvangvietnam.com]
 match = -61.9%%
@@ -29,7 +29,7 @@ url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-
 [demxanh.com]
 match = -76.2%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOooq4jVw45X5_x61GD9s7ZD-HvTD4WAvsg0q5-xtAi8IiXHQV_Lv
+url = https://demxanh.com/chieu-truc.html
 
 [vongxepsaigon.vn]
 match = -76.2%%
