--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-27 00:52:38
+lastsearch = 2024-07-27 01:33:32
 
 [www.lazada.vn]
 match = -193.3%%
@@ -12,9 +12,9 @@ title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
 url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html
 
 [shopee.vn]
-match = -140.0%%
-title = Rẻ Vô Địch Gối vuông tựa trang trí ( Gồm vỏ + ruột
-url = https://shopee.vn/Rẻ-Vô-Địch-Gối-vuông-tựa-trang-trí-(-Gồm-vỏ-ruột-Giá-tại-xưởng)-i.18055727.785277066
+match = -213.3%%
+title = Vỏ gối vuông tựa lưng, vỏ gối sofa, gối ôm hoa văn Tây Âu ...
+url = https://shopee.vn/Vỏ-gối-vuông-tựa-lưng-vỏ-gối-sofa-gối-ôm-hoa-văn-Tây-Âu-48cmx48cm-chất-liệu-gấm-nhung-thêu-gối-vuông-trang-trí-decor-i.18055727.9543459471
 
 [jysk.vn]
 match = -166.7%%
@@ -67,9 +67,9 @@ title = Vỏ gối vuông Canvas phong cách nhiệt đới Tropical
 url = https://tamnguyenshop.com/goi-vai-bo-canvas-vintage-109/vo-goi-vuong-canvas-phong-cach-nhiet-doi-tropical-2492.html
 
 [www.sendo.vn]
-match = -186.7%%
-title = Vỏ Gối Tựa Sofa Hàng Hiệu, Rẻ Bất Ngờ, Mọi Người Đều ...
-url = https://www.sendo.vn/vo-goi-tua-sofa.htm
+match = -166.7%%
+title = Vỏ Gối Sofa Uma Hàng Hiệu, Giá Sốc, Giao Hàng Tận Tay
+url = https://www.sendo.vn/vo-goi-sofa-uma.htm
 
 [edena.vn]
 match = -113.3%%
