CI images update

--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-26 22:34:02
+lastsearch = 2024-07-27 01:32:25
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-160x200.html
+match = 27.3%%
+title = Thảm giường Bode 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
 match = -4.5%%
@@ -119,7 +119,7 @@ url = https://covacu.com/tham-trai-giuong-bohemian-xanh-do
 [www.facebook.com]
 match = -300.0%%
 title = FITIN
-url = https://www.facebook.com/fitin.vn/?locale=km_KH
+url = https://www.facebook.com/fitin.vn/?locale=gn_PY
 
 [www.pinterest.com]
 match = -50.0%%
