--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-07-26 22:46:47
+lastsearch = 2024-07-27 01:45:26
 
 [demxanh.com]
 match = 6.9%%
@@ -14,7 +14,7 @@ url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xanh-com-hinh-hoa.htm
 [tiki.vn]
 match = 20.7%%
 title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
-url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307875
+url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=136632823
 
 [demchinhhang.com]
 match = 51.7%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
 url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [chiaki.vn]
-match = 13.8%%
-title = Chiếu điều hòa cao su non Tencel Latex 2D mẫu 2022
-url = https://chiaki.vn/chieu-dieu-hoa-cao-su-non-tencel-latex-2d-mau-2022
+match = 6.9%%
+title = Chiếu điều hòa Tencel latex cao su non 3D kèm gối
+url = https://chiaki.vn/chieu-dieu-hoa-tencel-latex-cao-su-non-3d-kem-goi
 
 [shopee.vn]
 match = -20.7%%
