--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-27 00:59:12
+lastsearch = 2024-07-27 01:39:36
 
 [tiki.vn]
 match = 16.0%%
@@ -12,9 +12,9 @@ title = Mua Chiếu trúc Đài Loan mặt trúc mặt lụa
 url = https://tiki.vn/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-mat-lua-p10764702.html?spid=10766238
 
 [www.tiktok.com]
-match = 0.0%%
-title = Cách Xem Lịch Chiếu Film Tại Taiwan
-url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
+match = -80.0%%
+title = Phim MAI của Trấn Thành sẽ được khởi chiếu tại Đài Loan ...
+url = https://www.tiktok.com/@danghoaly86/video/7348795087473609989
 
 [shopee.vn]
 match = -28.0%%
@@ -27,9 +27,9 @@ title = sitemap-article-2022-10-12.xml
 url = https://congly.vn/sitemap-article-2022-10-12.xml
 
 [www.facebook.com]
-match = -60.0%%
-title = Du lịch tự do Đài Loan | Ngày 12 tháng 4 phim Mai của ...
-url = https://www.facebook.com/groups/867394263291528/posts/ngày-12-tháng-4-phim-mai-của-trấn-thành-sẽ-được-công-chiếu-toàn-đài-loan-với-tiê/7807974442566774/
+match = -124.0%%
+title = 20231212 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞 ...
+url = https://www.facebook.com/ptsvietnamesenews/videos/20231212-bản-tin-tiếng-việt-pts-đài-loan-公視越南語新聞/1378308362826085/
 
 [vi.wikipedia.org]
 match = 6.7%%
@@ -47,9 +47,9 @@ title = Địa chí Tiền Giang - Volume 2 - Page 958 - Google Books Result
 url = https://books.google.com/books?id=eacMAQAAMAAJ&pg=PA958&lpg=PA958&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=jtZMztsEMi&sig=ACfU3U0c2kNGG00nqA37_OL8rwlqTrgFOA&hl=en&sa=X&ved=2ahUKEwjdi8impMWHAxV_tokEHcQtC98Q6AF6BAgWEAM
 
 [www.skyscanner.com.vn]
-match = -48.0%%
-title = Vé máy bay giá rẻ từ Taipei Taiwan Taoyuan đến Hà Nội
-url = https://www.skyscanner.com.vn/routes/tpe/han/taipei-taiwan-taoyuan-to-ha-noi.html
+match = -52.0%%
+title = Vé máy bay giá rẻ từ Chicago đến Đài Loan - Skyscanner
+url = https://www.skyscanner.com.vn/routes/chia/tw/chicago-to-đai-loan.html
 
 [www.bestprice.vn]
 match = -80.0%%
@@ -67,9 +67,9 @@ title = Phim Đài Loan
 url = https://tvmotchill.com/quoc-gia/phim-dai-loan/
 
 [www.youtube.com]
-match = -108.0%%
-title = 20240412 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞
-url = https://www.youtube.com/watch?v=9v-wyYZ3zkA
+match = -84.0%%
+title = Tin quốc tế 22/12 | Biệt kích Đài Loan và chiến thuật khiến ...
+url = https://www.youtube.com/watch?v=AJFnLR4FsNE
 
 [znews.vn]
 match = -40.0%%
