--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-27 00:45:49
+lastsearch = 2024-07-27 01:35:29
 
 [www.walmart.com]
 match = -162.5%%
@@ -69,7 +69,7 @@ url = https://www.instagram.com/meliahtlresorts/p/CsQkNaANnaw/
 [demxanh.com]
 match = -162.5%%
 title = Đệm bông ép 2m (2mx2m và 2mx2m2) giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-2mx2m2-200x220cm-gia-bao-nhieu.html
+url = https://demxanh.com/dem-bong-ep-2mx2m2-200x220cm-gia-bao-nhieu.html?srsltid=AfmBOopVT41zQ8oT3jQRpfmXo73jpzks-YShRG_5bs_vYuzsjN-CpD6l
 
 [olm.vn]
 match = -243.8%%
@@ -114,7 +114,7 @@ url = https://www.amazon.com/SYNTHETIC-NATURAL-DREAM-WEAVE-OCEAN/dp/B0812BHZ5Q
 [curlygurlluv.com]
 match = -68.8%%
 title = ZURY NATURAL DREAM BUNDLE- DEEP WAVE 18
-url = https://curlygurlluv.com/products/natural-dream-deep-wave-18
+url = https://curlygurlluv.com/products/natural-dream-deep-wave-18?srsltid=AfmBOor4pWrxxGURuMqf9bJgRoBCkoBp4ov-Ji0jXyWr7Yr5cz3hkZQG
 
 [www.sephora.com]
 match = 0.0%%
