CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-26 20:50:29
+lastsearch = 2024-07-27 01:53:50
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
 url = https://www.youtube.com/watch?v=D5B7MtNy_kM
 
 [books.google.com]
-match = -218.8%%
-title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHabHTbgv7&sig=ACfU3U3kAqhMcDcRJeL0oZLO9Eag20tzRg&hl=en&sa=X&ved=2ahUKEwiKiZOTmMSHAxVYMlkFHUh1LZoQ6AF6BAgZEAM
+match = -150.0%%
+title = American Soap Journal and Manufacturing Chemist
+url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9Fcz5tw_&sig=ACfU3U2DW7_ML79qtNX-EJuHRF7EwGzU2w&hl=en&sa=X&ved=2ahUKEwjO_-rBsMWHAxXRv4kEHZOECIYQ6AF6BAgjEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
@@ -557,9 +557,9 @@ title = 16 hy vọng của Thể thao Việt Nam tại Olympic Paris 2024
 url = https://congly.vn/16-hy-vong-cua-the-thao-viet-nam-tai-olympic-paris-2024-441266.html
 
 [www.tinthethao.com.vn]
-match = -206.2%%
-title = Biến Nketiah làm vật tế thần, Arsenal tính chiêu mộ Guehi
-url = https://www.tinthethao.com.vn/bien-nketiah-lam-vat-te-than-arsenal-tinh-chieu-mo-guehi-d771023.html
+match = -150.0%%
+title = Vừa lên hạng, CLB Việt Nam chiêu mộ đến 16 tân binh
+url = https://www.tinthethao.com.vn/vua-len-hang-clb-viet-nam-chieu-mo-den-16-tan-binh-d771587.html
 
 [vov.vn]
 match = -212.5%%
