--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-07-27 00:41:50
+lastsearch = 2024-07-27 01:51:25
 
 [shopee.vn]
-match = -666.7%%
-title = 1/4
-url = https://shopee.vn/Chiếu-Trúc-Tre-Cao-Bằng-Xịn-Các-Cỡ-0.8m-0.9m-1m-1.2m-1.4m-1.5m-1.6m-1.8m-2m-i.182611643.17934077095
+match = 4.3%%
+title = Chiếu Trúc Cao Bằng - Chiếu trúc cá nhân
+url = https://shopee.vn/Chiếu-Trúc-Cao-Bằng-Chiếu-trúc-cá-nhân-i.81313558.19277857647
 
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html?srsltid=AfmBOopV0MnAFkjtBqEJn-EKlwXCkneXmg8BmtwlQJOIj65KuMu3szT6
 
 [chuyenhangviet.com]
 match = -43.5%%
@@ -32,9 +32,9 @@ title = Xưởng chiếu cây cao bằng | By Cơ sở SX chiếu Tre Việt ...
 url = https://m.facebook.com/497069713692846/videos/1865016670231470/?__so__=watchlist&__rv__=video_home_www_playlist_video_list&locale=cs_CZ
 
 [chieutrucsaigon.com]
-match = -17.4%%
-title = CHIẾU TRÚC CAO BẰNG 1M GIÁ RẺ LOẠI 1 TẠI TPHCM
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-cao-bang-1m-gia-re-tai-tphcm-69.html
+match = 21.7%%
+title = CHIẾU CAO BẰNG NẰM CÓ TỐT KHÔNG?
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-cao-bang-nam-co-tot-khong-100.html
 
 [demxanh.com]
 match = -21.7%%
@@ -67,9 +67,9 @@ title = Độc đáo các sản phẩm từ trúc Cao Bằng
 url = https://caobang.gov.vn/viet-nam-dat-nuoc-con-nguoi/doc-dao-cac-san-pham-tu-truc-cao-bang-778155
 
 [www.facebook.com]
-match = 21.7%%
-title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
-url = https://www.facebook.com/chieutruccaobangcbg/
+match = -52.2%%
+title = Chiếu trúc Cao Bằng, Chiếu trúc thanh, Chiếu trúc cây
+url = https://www.facebook.com/chieutrucvietso1/
 
 [www.youtube.com]
 match = -95.7%%
