--- a/images/chieu-dieu-hoa-cao-su-120x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-120x190.html
 lastopen = 2024-06-06 16:55:18
 
 [search]
-lastsearch = 2024-07-27 01:17:54
+lastsearch = 2024-07-27 01:44:52
 
 [demxanh.com]
-match = 6.9%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = 34.5%%
+title = Chiếu điều hòa cao su non Tencel xanh nhạt
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOor-4CS-EtZqVsvG61Vik0RFbtkXJE3wK366ielzydHshHiMph-V
 
 [entershopping.vn]
 match = -13.8%%
@@ -22,9 +22,9 @@ title = [RẺ NHẤT] Chiều điều hòa cao su non Latex mẫu mới siêu ..
 url = https://demchinhhang.com/collections/chieu-dieu-hoa-cao-su-non
 
 [thegioichieutruc.com]
-match = -27.6%%
-title = Chiếu điều hòa cao su non Tencel cam đất chính hãng giá tốt
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-cam-dat/
+match = -31.0%%
+title = Chiếu điều hòa cao su non Tencel xanh ngọc chính hãng giá tốt
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-ngoc/
 
 [changagoidemdep.vn]
 match = -10.3%%
@@ -32,9 +32,9 @@ title = Chiếu điều hòa cao su non Tencel Ghi - Chăn ga gối đệm
 url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
 
 [thegioidemonline.com]
-match = 20.7%%
-title = Chiếu điều hòa cao su non Tencel màu vàng đậm
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
+match = 34.5%%
+title = Chiếu điều hòa cao su non Tencel Xanh nhạt
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOooSuJdGHCDHU2WZtwWmZHQ5qJ9u1aJQLVCLI7E_cuuiW34FHcLp
 
 [khodem.vn]
 match = 55.2%%
