--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-27 00:42:35
+lastsearch = 2024-07-27 01:45:32
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -226.7%%
-title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P.11, Q ...
-url = https://www.facebook.com/photo.php?fbid=1176105412820080&id=139181649845800&set=a.179106562519975&locale=en_GB
+match = -200.0%%
+title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
+url = https://www.facebook.com/photo.php?fbid=1176105412820080&id=139181649845800&set=a.179106562519975
 
 [phongthuykyhoa.com]
 match = -73.3%%
