--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-27 00:38:37
+lastsearch = 2024-07-27 01:48:17
 
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 18
-url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html?srsltid=AfmBOoqF1wy6Bie196-7B8Dd-1J5jNxMXXMZADxObcmll8lcUPY9sJ4f
+url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html?srsltid=AfmBOoqHGaLwcyk5JQ5EL-JmzKv379dQl_Dd7UwCxI1FqqmPNBVdXOFJ
 
 [shopee.vn]
 match = -105.0%%
@@ -62,9 +62,9 @@ title = Thảm trải chân giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải chân giường
 
 [noithathoaphat360.com]
-match = -60.0%%
-title = Giường ngủ GN301-18 - Noi That Hoa Phat
-url = http://noithathoaphat360.com/giuong-ngu-gn30118-p7654247.html
+match = -110.0%%
+title = Combo Bộ giường tủ phòng ngủ 401-18 - Noi That Hoa Phat
+url = https://noithathoaphat360.com/combo-bo-giuong-tu-phong-ngu-40118-p35700397.html
 
 [noithathofaco.net]
 match = -110.0%%
@@ -74,7 +74,7 @@ url = https://noithathofaco.net/san-pham/giuong-tu-ban-phan-nhap-khau-hfc-bgt-a0
 [everonvn.com.vn]
 match = -130.0%%
 title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOoq5Ro8kdLQBxTo5eUJCNTOI30B2jOT_AgbXHiBkEUFi0uFV3ZVe
 
 [noithatdaithanh.vn]
 match = -35.0%%
@@ -134,7 +134,7 @@ url = https://noithattamviet.net/cam-nang/tong-hop-cac-mau-giuong-quan-doi-ben-d
 [noithatcaco.vn]
 match = -135.0%%
 title = 65 Mẫu giường ngủ trẻ em bé trai bé gái - Thiết kế siêu xinh
-url = https://noithatcaco.vn/collections/giuong-ngu-tre-em
+url = https://noithatcaco.vn/collections/giuong-ngu-tre-em?srsltid=AfmBOoo-8IQXKFrayos3pYaiOLaTWK9go00UiFHkq9yTUNk9dgSiBNvR
 
 [sofahome.vn]
 match = 25.0%%
@@ -240,4 +240,9 @@ url = https://www.kymdan.com/danh-muc/giuong-sat-xep-di-dong
 match = -65.0%%
 title = Giường Ngủ Bọc Vải Mã 18 - Sofa Toàn Quốc
 url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-18.html?srsltid=AfmBOooGKAZu-2ZJVT8DhKFCwd_dlpi0qe_pdBAWaiZztBmXyYVaScL_
+
+[giuonggapvietnhat.vn]
+match = -50.0%%
+title = Giường gấp 3 khúc có nệm B90- rộng 90cm
+url = https://giuonggapvietnhat.vn/giuong-gap-3-khuc-co-nem-b90-rong-90cm-html.html
 
